[[aragonese]] moved to [[Aragonese]]: uppercase <aragonese#173510>

--- a/wiki/Aragonese.wikitext
+++ b/wiki/Aragonese.wikitext
@@ -1,44 +1,1 @@
-=== Noun ===
-
-# A person from [[w:Aragon|Aragon]].
-#: '''Translations''' 
-#:*[[Aragonese]]: [[aragonés]] ''m'', [[aragonesa]] ''f''
-#:*[[Catalan]]: [[aragonès]] ''m'', [[aragonesa]] ''f'' 
-#:*[[Chinese]]: [[阿拉贡人]]
-#:*{{nl}}: [[Aragonees]], ''m'' [[Aragonese]] ''f''
-#:*[[French]]: [[Aragonais]] ''m'', [[Aragonaise]] ''f'' 
-#:*[[German]]: [[Aragonesisch]] 
-#:*[[Italian]]: [[aragonese]] 
-#:*[[Romanica]]: [[aragonese]] ''m'', [[aragonesa]] ''f''
-#:*[[Spanish]]: [[aragonés]] ''m'', [[aragonesa]] ''f'' 
-
-# The language of [[w:Aragon|Aragon]], nowadays only spoken as a mother tongue by a few thousands in some valleys of the Pyrenees.
-# The Spanish language spoken in [[w:Aragon|Aragon]] when influenced by Aragonese traits.
-#:'''Translations''' 
-#:*[[Aragonese]]: [[aragonés]]
-#:*[[Catalan]]: [[aragonès]] 
-#:*[[Chinese]]: [[阿拉贡语]]
-#:*{{nl}}: [[Aragonees]]
-#:*[[French]]: [[aragonais]] ''m''
-#:*[[German]]: [[Aragonesisch]]
-#:*[[Italian]]: [[aragonese]] 
-#:*[[Romanica]]: [[aragonese]] ''m''
-#:*[[Spanish]]: [[aragonés]]
-
-
-===Adjective===
-
-# Of, from, or pertaining to Aragon, the Aragonese people or the Aragonese language. 
-#:'''Translations''' 
-#:*[[Aragonese]]: [[aragonés]]
-#:*[[Catalan]]: [[aragonès]] (m.) [[aragonesa]] (f.)
-#:*[[Chinese]]: [[阿拉贡的]]
-#:*[[Dutch]]: [[Aragonees]]
-#:*[[French]]: [[aragonais]] ''m'', [[aragonaise]] ''f''
-#:*[[German]]: [[aragonisch]]
-#:*[[Italian]]: [[aragonese]] 
-#:*[[Romanica]]: [[aragonese]] ''m'', [[aragonesa]] ''f''
-#:*[[Spanish]]: [[aragonés]]
-
-[[it:aragonese]]
-[[nl:aragonese]]
+#redirect [[Aragonese]]
