--- a/wiki/Armenia.wikitext
+++ b/wiki/Armenia.wikitext
@@ -1,46 +1,1 @@
-{{wikipedia}}
-==English==
-===Pronunciation===
-/&#593;ː'miːniə/
-===Proper noun===
-# a country in West Asia. Official name: Republic of Armenia. Capital: Yerevan
-
-====Translations====
-*Bosnian: [[Armenija]], [[Jermenija]] ''f''
-*Armenian: [[Հայաստան]] (Hayastan)
-*[[Breton]]: [[Armenia]]
-*Bulgarian: [[Армения]]
-*Chinese: [[亚美尼亚]] (Yàměiníyà)
-*Danish: [[Armenien]]
-*Dutch: [[Armenië]]
-*[[Esperanto]]: [[Armenio]], Armenujo
-*Finnish: [[Armenia]]
-*French: [[Arménie]] ''f''
-*German: [[Armenien]]
-*Greek: [[Αρμενία]]
-*Hungarian: [[Örményország]]
-*[[Interlingua]]: [[Armenia]]
-*Italian: [[Armenia]] ''f''
-*Japanese: [[アルメニア]]
-*Persian: [[ارمنستان]] (Armanestan)
-*Polish: [[Armenia]]
-*Portuguese: [[Arménia]] (pt-pt), [[Armênia]] (pt-br)
-*Romanian: [[Armenia]] ''f''
-*[[Romanica]]: [[Armenia]] ''f''
-*Russian: [[Армения]]
-*Serbian:
-:*cyrillic: [[Јерменија]], [[Арменија]] ''f''
-:*latin: [[Jermenija]], [[Armenija]] ''f''
-*Spanish: [[Armenia]]
-*Swedish: [[Armenien]]
-*Turkish: [[Ermenistan]]
-
-===See also===
-*[[Countries of the world]]
-*[[w:Armenia|Wikipedia article on Armenia]]
-[[Category:English country nouns]]
-
-[[hi:Armenia]]
-[[nl:armenia]]
-[[pl:Armenia]]
-[[fi:Armenia]]
+#redirect [[Armenia]]
