--- a/wiki/Alsatian.wikitext
+++ b/wiki/Alsatian.wikitext
@@ -1,39 +1,1 @@
-==English==
-=== Pronunciation ===
-*ăl-sā'shən, /ælˈseɪʃən/, /<tt>{l"seIS@n</tt>/
-*:[[Rhymes:English:-eɪʃən|Rhymes: -eɪʃən]]
-
-===Adjective===
-'''Alsatian'''
-
-# Of or relating to [[Alsace]]
-
-===Proper noun===
-'''Alsatian''' ([[Alsatians]])
-
-# A person from [[Alsace]]
-
-====Translations====
-* {{fr}} : [[Alsacien]] ''m'', [[Alsacienne]] ''f''
-
-===Proper noun===
-'''Alsatian'''
-
-# The language or dialect of [[Alsace]]
-
-====Translations====
-*Alsatian: [[Elsässisch]]
-*{{fr}} : [[alsacien]] ''m''
-
-===Common noun===
-'''alsatian''' ([[alsatians]])
-
-# English name for a breed of dog called [[German shepherd]] until the first World War, changed at that time due to anti-German sentiment.
-
-====Synonyms====
-*[[German shepherd]]
-
-[[fr:Alsatian]]
-[[hi:Alsatian]]
-[[nl:Alsatian]]
-[[pl:Alsatian]]
+#redirect [[Alsatian]]
