--- a/wiki/penis.wikitext
+++ b/wiki/penis.wikitext
@@ -59,8 +59,8 @@ See also [[WikiSaurus:penis]]
 *[[schlong]] (''slang'')
 *[[schwanz]] (''slang'')
 *[[thumper]] (''slang'')
-*[[todger]] (''slang'')
-*[[tool]] ('' British informal slang'')
+*[[todger]] (''British informal, slang'')
+*[[tool]] (''slang'')
 *[[trouser snake]] (''slang'')
 *[[wang]] (''slang'')
 *[[weener]] (''juvenille'')
