[[argentina]] moved to [[Argentina]]: uppercase <argentina#173518>

--- a/wiki/Argentina.wikitext
+++ b/wiki/Argentina.wikitext
@@ -1,64 +1,1 @@
-==English==
-===Proper noun===
-'''Argentina'''
-
-# a country in South America. Official name: Argentine Republic.
-
-====Translations====
-
-*Bosnian: [[Argentina]] ''f''
-*[[Breton]]: [[Arc'hantina]]
-*Bulgarian: [[Аржентина]]
-*[[Catalan]]: [[Argentina]] ''f''
-*Chinese: [[阿根廷]] (Āgēntíng)
-*Czech: [[Argentina]] ''f''
-*Danish: [[Argentina]]
-*Dutch: [[Argentinië]]
-*[[Esperanto]]: [[Argentino]]
-*Finnish: [[Argentiina]]
-*French: [[Argentine]] ''f''
-*German: [[Argentinien]]
-*Greek: [[Αργεντινή]]
-*Hungarian: [[Argentína]]
-*[[Interlingua]]: [[Argentina]]
-*Irish: an [[Airgintín]] ''f''
-*Italian: [[Argentina]]
-*Japanese: [[アルゼンチン]], [[亜爾然丁]] (Aruzenchin)
-*Persian: [[آرژانتین]] (Arzhantin)
-*Polish: [[Argentyna]]
-*Portuguese: [[Argentina]]
-*Romanian: [[Argentina]] ''f''
-*Russian: [[Аргентина]]
-*Serbian:
-:*cyrillic: [[Аргентина]] ''f''
-:*latin: [[Argentina]] ''f''
-*Spanish: [[Argentina]]
-*Swedish: [[Argentina]]
-*Turkish: [[Arjantin]]
-*Welsh: yr [[Ariannin]] ''f''
-
-===See also===
-*[[Countries of the world]]
-*[[w:Argentina]]
-----
-
-==Italian==
-===Proper noun===
-'''Argentina''' ''f''
-
-# [[Argentina]]
-
-===Related terms===
-*[[argentino]]
-*[[argento]]
-
-[[Category:English country nouns]]
-[[Category:It:Countries]]
-
-[[es:Argentina]]
-[[hi:Argentina]]
-[[it:Argentina]]
-[[la:Argentina]]
-[[hu:Argentina]]
-[[pl:Argentina]]
-[[sv:Argentina]]
+#redirect [[Argentina]]
