[[australia]] moved to [[Australia]]: uppercase <australia#173520>

--- a/wiki/Australia.wikitext
+++ b/wiki/Australia.wikitext
@@ -1,97 +1,1 @@
-==English==
-===Pronunciation===
-*ə-strāl'yə, /əˈstreɪljə/, /<tt>@"streIlj@</tt>/
-
-===Etymology===
-First attested [[w:16th century|16th century]], from Latin [[terra]] [[australis]] [[incognita]], ''unknown southern land'', from [[auster]] ''south wind''. See also [[Terra Australis]].
-
-===Proper noun===
-'''Australia''' {{wikipedia}}
-
-# A country in [[Oceania]]. Official name: [[Commonwealth of Australia]].
-
-====Related terms====
-*[[Aussie]]
-*[[Australasia]]
-*[[Australian]]
-*[[Australianism]]
-
-====Translations====
-{| border=0 width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-*[[Amharic]]: [[አውስትራልያ]] (Ăwstralya)
-*Arabic: [[أستراليا]] (Usturāliyā), [[أوستراليا]] (Ūsturāliyā)
-*Armenian: [[Աւստրալիա]] (Australia), [[Ավստրալիա]] (Avstralia)
-*[[Basque]]: Australia
-*Belarusian: [[Аўстралія]] (Aŭstralija)
-*Bengali: [[অস্ট্রেলিয়া]] (Ôsṭreliyā)
-*Bosnian: [[Australija]] ''f''
-*[[Breton]]: [[Aostralia]]
-*Bulgarian: [[Австралия]]
-*[[Catalan]]: [[Austràlia]]
-*CJKV Characters: [[濠]], [[豪]]
-*Chinese: [[澳洲]] (Àozhōu); [[澳大利亞]], [[澳大利亚]] (Àodàlìyà)
-*Czech: [[Austrálie]]  ''f''
-*Danish: [[Australien]]
-*Dutch: [[Australië]]
-*[[Esperanto]]: [[Aŭstralio]]
-*Estonian: [[Austraalia]]
-*Finnish: Australia
-*French: [[Australie]]
-*[[Georgian]]: [[ავსტრალია]] (Avstralia)
-*German: [[Australien]] ''no gender''
-*Greek: [[Αυστραλία]] (''demotic''), [[Αὐστραλία]] (''katharevousa'') (Australía)
-*[[Hawaiian]]: [[ʻAukekulelia]]
-*Hebrew: [[אוסטרליה]] (Osṭralia)
-*[[Hindi]]: [[ऑस्ट्रेलिया]] (Òsṭreliyā), [[आस्ट्रेलिया]] (Āsṭreliyā)
-*Hungarian: [[Ausztrália]]
-*Indonesian: Australia
-*[[Interlingua]]: Australia
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-*Italian: Australia ''f''
-*Japanese:
-**[[オーストラリア]] (ōsutoraria)
-**[[濠太刺利]], [[濠太剌利]]
-**[[濠洲]], [[豪州]] (ごうしゅう, gōshū)
-**[[濠]], [[豪]] (ごう, gō)
-*[[Kannada]]: [[ಆಸ್ಟ್ರೆಲಿಯ]] (Āsṭreliya)
-*[[Khmer]]: [[អូស្ត្រាលី]] (Ūstrālī)
-*Korean: [[오스트레일리아]] (Oseuteuraeillia), [[호주]](Hoju)
-*[[Lao]]: [[ອົດສະຕາລີ]] (Ôtsatālī)
-*Latvian: [[Austrālija]] ''f''
-*[[Persian]]: [[استرالیا]] (Ostrāliyā)
-*Polish: Australia
-*Portuguese: [[Austrália]]
-*Romanian: Australia ''f''
-*Russian: [[Австралия]] ''f'' (Avstraliya)
-*Serbian: [[Аустралија]], [[Australija]] ''f''
-*Slovak: [[Austrália]] ''f''
-*Spanish: Australia
-*Swedish: [[Australien]]
-*[[Tamil]]: [[அவுஸ்திரேலியா]] (Avustirēliyā), [[ஆஸ்திரேலியா]] (Āstirēliyā)
-*Thai: [[ออสเตรเลีย]]
-*Tibetan: [[ཨོ་སེ་ཐེ་ལི་ཡ]] (O.se.the.li.ya)
-*Turkish: [[Avustralya]]
-*Ukrainian: [[Австралія]] (Avstralija)
-*[[Urdu]]: [[آسٹریلیا]] (Āsṫreliyā)
-*[[Yiddish]]: [[אױסטראַליע]] (Oystralye)
-*Welsh: [[Awstralia]]
-|}
-|}
-
-===See also===
-*[[Terra Australis]]
-*[[New Holland]]
-*[[Countries of the world]]
-
-[[de:Australien]]
-[[fr:Australie]]
-[[ja:Australia]]
-[[simple:Australia]]
-
-[[Category:English country nouns]]
+#redirect [[Australia]]
