--- a/wiki/mulczowa%C4%87.wikitext
+++ b/wiki/mulczowa%C4%87.wikitext
@@ -4,7 +4,7 @@
 From Polish noun ''[[mulcz]]'' from English [[mulch]].
 
 ===Transitive verb===
-'''mulczować''' (1st pers. sg.: ''present'' mulczuję, ''past'' mulczowałem, ''future'' będę mulczował)
+'''mulczować''' (''present'': ''sg'' mulczuję, mulczujesz, mulczuje, ''pl'' mulczujemy, mujczujecie, mulczują; ''past'': mulczowałem; ''future'': będę mulczował)
 
 # [[mulch]]
 #:'''''Mulczuj''' swój ogród warzywny, aby zatrzymać wilgoć.'' → '''Mulch''' your vegetable garden to retain moisture.
