[[brazil]] moved to [[Brazil]]: uppercase <brazil#173526>

--- a/wiki/Brazil.wikitext
+++ b/wiki/Brazil.wikitext
@@ -1,56 +1,1 @@
-==Bosnian==
-===Proper Noun===
-'''Brazil''' ''m''
-#[[Brazil]]
-[[Category:Bosnian nouns]]
-
-----
-
-==English==
-===Proper Noun===
-'''Brazil'''
-#a country in South America. Official name: Federative Republic of Brazil.
-====Translations====
-*Bosnian: [[Brazil]] ''m''
-*[[Breton]]: [[Brazil]]
-*Chinese: [[巴西]] (Bāxī)
-*Czech: [[Brazílie]]
-*Danish: [[Brasilien]]
-*Dutch: [[Brazilië]]
-*[[Esperanto]]: [[Brazilo]]
-*Finnish: [[Brasilia]]
-*French: [[Brésil]] ''m''
-*German: [[Brasilien]]
-*Greek: [[Βραζιλία]]
-*Hungarian: [[Brazília]]
-*Indonesian: [[Brasil]], [[Brazil]]
-*[[Interlingua]]: [[Brasil]]
-*Italian: [[Brasile]] ''m''
-*Japanese: [[ブラジル]], [[伯剌西爾]] (Burajiru), [[ブラジル]][[連邦]][[共和国]] (Burajiru renpō-kyōwakoku)
-*Polish: [[Brazylia]]
-*Portuguese: [[Brasil]]
-*Romanian: [[Brazilia]] ''f''
-*[[Romanica]]: [[Brasil]] ''m''
-*Russian: [[Бразилия]]
-*Serbian:
-:*cyrillic: [[Бразил]] ''m''
-:*latin: [[Brazil]] ''m''
-*Slovene: [[Brazilija]] ''f''
-*Spanish: [[Brasil]]
-*Swedish: [[Brasilien]]
-*Turkish: [[Brezilya]]
-===See also===
-*[[Countries of the world]]
-*[[w:Brazil|Wikipedia article on Brazil]]
-[[Category:English country nouns]]
-[[Category:English exonyms]]
-
-----
-
-==Serbian==
-===Proper Noun===
-'''Brazil''' ''m''
-#[[Brazil]]
-====See Also====
-*[[Бразил]]
-[[Category:Serbian nouns]]
+#redirect [[Brazil]]
