/* Transitive verb */ <mulczować#104618>

--- a/wiki/mulczowa%C4%87.wikitext
+++ b/wiki/mulczowa%C4%87.wikitext
@@ -6,7 +6,7 @@ From Polish noun ''[[mulcz]]'' from English [[mulch]].
 ===Transitive verb===
 '''mulczować''' (''present'': ''sg'' mulczuję, mulczujesz, mulczuje, ''pl'' mulczujemy, mujczujecie, mulczują; ''past'': mulczowałem; ''future'': będę mulczował)
 
-# [[mulch]]
+# to [[mulch]]
 #:'''''Mulczuj''' swój ogród warzywny, aby zatrzymać wilgoć.'' → '''Mulch''' your vegetable garden to retain moisture.
 
 ====Related terms====
