--- a/wiki/China.wikitext
+++ b/wiki/China.wikitext
@@ -1,186 +1,1 @@
-==English==
-*[[w:AHD|AHD]]: chī'nə
-*[[w:IPA|IPA]]: /ˈtʃaɪnə/
-*[[w:SAMPA|SAMPA]]: /"tSaIn@/
-
-===Proper noun===
-'''China (Zhongguo)'''
-
-# Country in East Asia. Official name: People's Republic of China (Zhonghua Renmin Gongheguo).
-# Region in East Asia comprising the areas governed by the People's Republic of China and the Republic of China ([[Taiwan]]).
-# The civilisation/civilization of the Chinese people.
-
-====Translations====
-*Arabic: [[الصين]] (aṣ-ṣīn)
-*Basque: [[Txina]]
-*Bosnian: [[Kina]] ''f''
-*[[Breton]]: [[Sina]]
-*Chinese: [[中国]] / [[中國]] ([[Zhōngguó]], [[Zhongguo]])
-*Czech: [[Čína]]
-*Danish: [[Kina]]
-*Dutch: [[China]]
-*[[Esperanto]]: [[Ĉinio]], [[Ĉinujo]], [[Ĥinujo]]
-*Finnish: [[Kiina]]
-*French: [[Chine]]
-*German: [[China]]
-*Greek: [[Κίνα]]
-*Hindi: [[चीन]] (cīn)
-*Hungarian: [[Kína]]
-*Indonesian: [[China]], [[Cina]]
-*[[Interlingua]]: [[China]]
-*Italian: [[Cina]]
-*Japanese: [[中国]] ([[ちゅうごく]], chūgoku)
-*Korean: [[중국]] [中國] (jungguk)
-*Malay: [[Tiongkok]]
-*[[Maldivian]]: [[Seenu Kara]]
-*[[Pahlavi]] [[čīnī]]
-*Persian: [[چين]] (čīn)
-*Polish: [[Chiny]]
-*Portuguese: [[China]] ''f''
-*Romanian: [[China]] ''f''
-*[[Sanskrit]]: [[चीन]] (čīn)
-*Russian: [[Китай]] (Kitay)
-*Serbian:
-:*cyrillic: [[Кина]] ''f''
-:*latin: [[Kina]] ''f''
-*Slovene: [[Kitajska]] ''f''
-*Spanish: [[China]]
-*Swedish: [[Kina]]
-*Thai: [[จีน]] (Cīn)
-*Turkish: [[Çin]]
-*[[Urdu]]: [[چين]] (čīn)
-*Vietnamese: [[Trung quốc]]
-
-====Derived terms====
-*[[Chinese]]
-
-====See also====
-*[[Cathay]]
-*[[w:China in world languages]]
-*[[Countries of the world]]
-
-===Noun===
-'''china''' (''[[countable]] and [[uncountable]]'')
-
-#(''uncountable'') [[Ceramic]] or [[porcelain]] <!-- isn't it just one type of porcelain? [[User:Hippietrail|Hippietrail]] 08:19, 20 Feb 2004 (UTC) -->
-#(''uncountable'') [[Tableware]] made from china.
-#(''[[Cockney rhyming slang]]''; ''shortened from'' '''china plate'''; ''countable'')) [[Mate]] (i.e., friend).
-#:''All right, me old china?''
-#(''countable'') A [[cymbal]], flattened at the perimeter, about 16 to 20 inches (40 to 50 cm) across, that is ridden or crashed to produce a distinctive "trashy" sound.
-
-====Derived terms====
-*[[bone china]]
-
-====Translations====
-
-'''porcelain'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--Put translations for languages from A to I here-->
-*Chinese Characters: [[炻]]<!-- just one kind of china -->
-*Italian: [[porcellana]] ''f''
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--Put translations for languages from J to Z here-->
-|}
-|}
-
-'''tableware made from china'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--Put translations for languages from A to I here-->
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--Put translations for languages from J to Z here-->
-|}
-|}
-
-'''Cockney rhyming slang: mate'''
-''See'' [[mate]]
-
-'''cymbal'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--Put translations for languages from A to I here-->
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--Put translations for languages from J to Z here-->
-|}
-|}
-
-===Adjective===
-'''china''' (''no [[comparative]] or [[superlative]]'')
-
-#Made of china.
-
-[[Category:English exonyms]]
-----
-==Dutch==
-===Proper noun===
-'''China'''
-
-#China (''the country'')
-
-----
-==German==
-===Proper noun===
-'''China'''
-
-#China (''the country'')
-
-----
-==Indonesian==
-===Proper noun===
-'''China'''
-
-====Variant spellings====
-*[[Cina#Indonesian|Cina]]
-
-#China (''the country'')
-
-----
-==Interlingua==
-===Proper noun===
-'''China'''
-
-#China (''the country'')
-
-----
-==Portuguese==
-===Proper noun===
-'''China''' ''f''
-
-#China (''the country'')
-
-----
-==Romanian==
-===Proper noun===
-'''China''' ''f''
-
-#China (''the country'')
-
-----
-==Spanish==
-===Proper noun===
-'''China'''
-
-#China (''the country'')
-
-[[Category:English country nouns]]
-
-[[hi:China]]
-[[hu:China]]
-[[nl:China]]
-[[pl:China]]
+#redirect [[China]]
