[[georgia]] moved to [[Georgia]]: uppercase <georgia#173537>

--- a/wiki/Georgia.wikitext
+++ b/wiki/Georgia.wikitext
@@ -1,118 +1,1 @@
-==English==
-{{wikipedia}}
-===Proper Noun===
-'''Georgia'''
-#A [[country]] in East [[Europe]]. Official name: Georgia. Capital: [[Tbilisi]].
-#A {{USstate}}  Capital: [[Atlanta]].
-#A female [[given name]].
-
-====Translations====
-
-'''country'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--left column-->
-*Armenian: [[Վրաստան]]
-*Bosnian: [[Gruzija]] ''f''
-*Breton: [[Jorjia]]
-*Chinese: [[格鲁吉亚]]
-*Croatian: [[Gruzija]] ''f''
-*Czech: [[Gruzie]]
-*Danish: [[Georgien]]
-*Dutch: [[Georgië]]
-*[[Esperanto]]: [[Kartvelio]], [[Kartvelujo]]
-*Estonian: [[Gruusia]]
-*Finnish: [[Georgia]]
-*French: [[Géorgie]] ''f''
-*Georgian: [[საქართველო]] ([[Sakartvelo]]), [[Sakartvelos Respublika]]
-*German: [[Georgien]]
-*Greek: [[Γεωργία]]
-*Hebrew: [[גרוזיה]]
-*Hungarian: [[Grúzia]]
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--right column-->
-*[[Interlingua]]: [[Georgia]]
-*Italian: [[Georgia]] ''f''
-*Japanese: [[グルジア]]
-*Korean: [[그루지야]] (geurijiya)
-*Persian: [[گرجستان]] (Gorjestân)
-*Polish: [[Gruzja]]
-*Portuguese: [[Geórgia]]
-*Romanian: [[Georgia]] ''f''
-*Russian: [[Грузия]]
-*Serbian:
-:*cyrillic: [[Грузија]] ''f''
-:*latin: [[Gruzija]] ''f''
-*Slovene: [[Gruzija]] ''f''
-*Spanish: [[Georgia]]
-*Swedish: [[Georgien]]
-*Thai: [[จอร์เจีย]]
-*Turkish: [[Gürcistan]]
-*Vietnamese: [[Giê óc gi a]]
-|}
-|}
-
-'''state of the USA'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--left column-->
-*Bosnian: [[Džordžija]] ''f''
-*French: [[Géorgie]]
-*Serbian:
-:*cyrillic: [[Џорџија]] ''f''
-:*latin: [[Džordžija]] ''f''
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--right column-->
-*Swedish: Georgia
-|}
-|}
-
-'''name'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--left column-->
-*Italian: [[Giorgia]] ''f''
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--right column-->
-|}
-|}
-
-===Derived terms===
-*[[Georgian]]
-
-===Related terms===
-*[[George]]
-
-===See also===
-*[[Countries of the world]]
-*[[GA]]
-===External links===
-*[[w:Georgia (country)|Wikipedia article on Georgia]]
-{{pedialite}}
-----
-==Italian==
-===Proper noun===
-'''Georgia''' ''f''
-
-# Georgia (''country'')
-
-===Related terms===
-*[[georgiano]]
-
-[[Category:English country nouns]]
-[[pl:Georgia]]
+#redirect [[Georgia]]
