--- a/wiki/Holland.wikitext
+++ b/wiki/Holland.wikitext
@@ -1,14 +1,1 @@
-===Proper Noun===
-'''Holland'''
-
-# a region of The Netherlands.
-# commonly but incorrectly used to refer to the whole of The Netherlands.
-
-====Related terms====
-*[[New Holland]]
-
-===See also===
-*[[The Netherlands]]
-[[Category:English country nouns]]
-
-[[da:Holland]]
+#redirect [[Holland]]
