[[honduras]] moved to [[Honduras]]: uppercase <honduras#173542>

--- a/wiki/Honduras.wikitext
+++ b/wiki/Honduras.wikitext
@@ -1,34 +1,1 @@
-==English==
-===Proper noun===
-
-# Country in Central America. Official name: Republic of Honduras.
-===Translations===
-*[[Bosnian]]: Honduras ''m''
-*[[Breton]]: [[Honduras]]
-*[[Chinese]]: [[洪都拉斯]]
-*[[Danish]]: Honduras
-*[[Dutch]]: Honduras
-*[[Esperanto]]: [[Honduro]]
-*[[Finnish]]: Honduras
-*[[French]]: Honduras
-*[[German]]: Honduras
-*[[Greek]]: [[Ονδούρα]]
-*[[Hungarian]]: [[Honduras]]
-*[[Interlingua]]: Honduras
-*[[Italian]]: Honduras
-*[[Japanese]]: [[ホンジュラス]] (Honjurasu)
-*[[Polish]]: Honduras
-*[[Portuguese]]: Honduras
-*[[Romanian]]: [[Honduras]] ''n''
-*[[Russian]]: [[Гондурас]]
-*[[Spanish]]: Honduras
-*[[Swedish]]: Honduras
-*[[Turkish]]: Honduras
-
-===See also===
-*[[Countries of the world]]
-*[[w:Honduras|Wikipedia article on Honduras]]
-[[Category:English country nouns]]
-
-[[hu:Honduras]]
-[[tr:Honduras]]
+#redirect [[Honduras]]
