[[indonesia]] moved to [[Indonesia]]: uppercase <indonesia#173545>

--- a/wiki/Indonesia.wikitext
+++ b/wiki/Indonesia.wikitext
@@ -1,55 +1,1 @@
-==English==
-===Proper noun===
-'''Indonesia'''
-# Country in Southeast Asia. Official name: Republic of Indonesia.
-
-===Translations===
-*[[Bosnian]]: [[Indonezija]] ''f''
-*[[Breton]]: [[Indonezia]]
-*Chinese: [[印度尼西亚]] (Yindunixiya)
-*Danish: [[Indonesien]]
-*Dutch: [[Indonesië]]
-*[[Esperanto]]: [[Indonezio]]
-*Estonian: [[Indoneesia]]
-*Finnish: Indonesia
-*French: [[Indonésie]]
-*German: [[Indonesien]]
-*Greek: [[Ινδονησία]]
-*Hungarian: [[Indonézia]]
-*[[Indonesian]]: Indonesia
-*[[Interlingua]]: Indonesia
-*Italian: Indonesia
-*Japanese: [[インドネシア]]
-*[[Maldivian]]: [[Asey kara]]
-*Polish: [[Indonezja]]
-*Portuguese: [[Indonésia]]
-*Romanian: [[Indonezia]] ''f''
-*Russian: [[Индонезия]] (Indonjezija)
-*Spanish: Indonesia
-*Swedish: [[Indonesien]]
-*Turkish: [[Endonezya]]
-
-===See also===
-*[[Countries of the world]]
-*[[w:Indonesia|Wikipedia article on Indonesia]]
-[[Category:English country nouns]]
-
-----
-
-==Italian==
-===Pronunciation===
-Indonè<u>s</u>ia, /indoˈnɛzja/, /<tt>indo"nEzja</tt>/
-===Proper noun===
-'''Indonesia''' ''f''
-
-# Indonesia
-
-===Related terms===
-*[[indonesiano]]
-[[Category:It:Countries]]
-[[hi:Indonesia]]
-[[it:Indonesia]]
-[[hu:Indonesia]]
-[[nl:indonesia]]
-[[pl:Indonesia]]
-[[fi:Indonesia]]
+#redirect [[Indonesia]]
