[[latvia]] moved to [[Latvia]]: uppercase <latvia#173549>

--- a/wiki/Latvia.wikitext
+++ b/wiki/Latvia.wikitext
@@ -1,43 +1,1 @@
-{{wikipedia}}
-==English==
-===Proper noun===
-'''Latvia'''
-
-# One of the [[Baltic]] countries. Official name: Republic of Latvia.
-==== Translations ====
-*[[Bosnian]]: Latvija ''f''
-*[[Breton]]: Latvia
-*[[Chinese]]: [[拉脱维亚]] (la1 tuo1 wei2 ya4)
-*[[Czech]]: [[Lotyšsko]]
-*[[Danish]]: [[Letland]]
-*[[Dutch]]: [[Letland]] ''n''
-*[[Esperanto]]: [[Latvio]], [[Latvujo]]
-*[[Estonian]]: [[Läti]]
-*[[Finnish]]: Latvia
-*[[French]]: [[Lettonie]] ''f''
-*[[German]]: [[Lettland]] ''n''
-*[[Greek]]: [[Λεττονία]]
-*[[Hungarian]]: [[Lettország]]
-*[[Italian]]: [[Lettonia]]
-*[[Japanese]]: [[ラトビア]] (Ratobia), [[ラトヴィア]] (Ratovia)
-*[[Latvian]]: [[Latvija]]
-*[[Lithuanian]]: [[Latvija]]
-*[[Polish]]: [[Łotwa]]
-*[[Portuguese]]: [[Letónia]]
-*[[Romanian]]: [[Letonia]] ''f''
-*[[Russian]]: [[Латвия]]
-*[[Slovak]]: [[Lotyšsko]] ''n''
-*[[Slovene]]: [[Latvija]] ''f''
-*[[Spanish]]: [[Letonia]] ''f''
-*[[Swedish]]: [[Lettland]]
-*[[Thai]]: [[แลตเวีย]] (Laetwia)
-*[[Turkish]]: [[Letonya]]
-
-===See also===
-*[[Countries of the world]]
-*[[w:Latvia|Wikipedia article on Latvia]]
-[[Category:English country nouns]]
-
-[[it:Latvia]]
-[[hu:Latvia]]
-[[nl:Latvia]]
+#redirect [[Latvia]]
