--- a/wiki/Myanmar.wikitext
+++ b/wiki/Myanmar.wikitext
@@ -1,38 +1,1 @@
-==English==
-
-===Proper noun===
-'''Myanmar'''
-
-# Country in Southeast Asia. Official name: Union of Myanmar. Also known as [[Burma]] (which was formerly the official name).
-# The Sino-Tibetan official language of the country Myanmar. Also known as [[Burmese]].
-# The script in which the Myanmar language is written. Also known as [[Burmese]].
-
-====Translations====
-*[[Bosnian]]: [[Mjanmar]] ''m'', [[Burma]] ''f''
-*Breton: Myanmar
-*Chinese: [[缅甸]] (miǎn diàn)
-*Czech: Myanmar
-*Danish: Myanmar
-*Dutch: Myanmar
-*Esperanto: [[Mjanmao]]
-*Finnish: Myanmar
-*French: Myanmar
-*German: Myanmar
-*Greek: [[Μιανμάρ]], [[Μυανμάρ]]
-*Hungarian: [[Mianmar]]
-*Interlingua: Myanmar
-*Italian: Myanmar
-*Japanese: [[ミャンマー]] (Myanma)
-*Myanmar: [[ရန္မာ]]
-*Polish: Myanmar
-*Romanian: Myanmar ''n''
-*Russian: [[Мьянма]]
-*Spanish: Myanmar
-*Swedish: Myanmar
-*Turkish: Myanmar
-
-===See also===
-*[[Countries of the world]]
-[[Category:English country nouns]]
-
-[[tr:Myanmar]]
+#redirect [[Myanmar]]
