[[oman]] moved to [[Oman]]: uppercase <oman#173560>

--- a/wiki/Oman.wikitext
+++ b/wiki/Oman.wikitext
@@ -1,35 +1,1 @@
-==English==
-
-===Proper noun===
-'''Oman'''
-# Country in the Middle East. Official name: Sultanate of Oman.
-
-====Translations====
-*[[Arabic]]: [[عمان]]
-*[[Bosnian]]: Oman ''m''
-*[[Breton]]: Oman
-*[[Chinese]]: [[阿曼]] (Aman), [[阿曼苏丹国]] (Aman Sudanguo)
-*[[Danish]]: Oman
-*[[Dutch]]: Oman
-*[[Esperanto]]: [[Omano]]
-*[[Finnish]]: Oman
-*[[French]]: Oman ''m''
-*[[German]]: Oman
-*[[Greek]]: [[Ομάν]]
-*[[Hungarian]]: [[Omán]]
-*[[Interlingua]]: Oman
-*[[Italian]]: Oman ''m''
-*[[Japanese]]: [[オマーン]] (Omān)
-*[[Persian]]: [[عمان]] (Ommân)
-*[[Polish]]: Oman
-*[[Portuguese]]: [[Omã]]
-*[[Romanian]]: Oman ''n''
-*[[Russian]]: [[Оман]]
-*[[Spanish]]: [[Omán]]
-*[[Swedish]]: Oman
-*[[Turkish]]: [[Umman]]
-
-===See also===
-*[[Countries of the world]]
-*[[w:Oman|Wikipedia article on Oman]]
-[[Category:English country nouns]]
+#redirect [[Oman]]
