--- a/wiki/Paraguay.wikitext
+++ b/wiki/Paraguay.wikitext
@@ -1,39 +1,1 @@
-==English==
-
-===Proper noun===
-'''Paraguay'''
-# Country in South America. Official name: Republic of Paraguay.
-
-====Translations====
-
-*[[Bosnian]]: Paragvaj ''m''
-*[[Breton]]: Paraguay
-*[[Chinese]]: [[巴拉圭]] (Balagui)
-*[[Danish]]: Paraguay
-*[[Dutch]]: Paraguay
-*[[Esperanto]]: [[Paragvajo]]
-*[[Finnish]]: Paraguay
-*[[French]]: Paraguay ''m''
-*[[German]]: Paraguay
-*[[Greek]]: [[Παραγουάη]]
-*[[Hungarian]]: [[Paraguay]]
-*[[Interlingua]]: Paraguay
-*[[Italian]]: Paraguay ''m''
-*[[Japanese]]: [[パラグアイ]] (Paraguai)
-*[[Polish]]: [[Paragwaj]]
-*[[Portuguese]]: [[Paraguai]]
-*[[Romanian]]: [[Paraguai]] ''n''
-*[[Russian]]: [[Парагвай]]
-*[[Spanish]]: Paraguay ''m''
-*[[Swedish]]: Paraguay
-*[[Turkish]]: Paraguay
-
-===See also===
-* [[Countries of the world]]
-[[Category:English country nouns]]
-
-[[de:Paraguay]]
-[[et:Paraguay]]
-[[hu:Paraguay]]
-[[pl:Paraguay]]
-[[tr:Paraguay]]
+#redirect [[Paraguay]]
