--- a/wiki/%D0%BC%D1%8D%D1%80.wikitext
+++ b/wiki/%D0%BC%D1%8D%D1%80.wikitext
@@ -1,7 +1,6 @@
-==[[Russian]]== (m&ecirc;r)
-===Translations===
-*[[Bulgarian]]: [[кмет]] ''m''
-*[[English]]: [[mayor]]
-*[[French]]: [[maire]] ''m'', [[bourgmestre]] ''m''
-*[[German]]: [[Bürgermeister]] ''m'', [[Bürgermeisterin]] ''f''
-*[[Greek]]: [[demarchos]]/[[dimarchos]]
+=={{ru}}==
+[[Category:Russian nouns]]
+===Noun===
+'''мэр''' (mer) ''m''
+
+#[[mayor]]
