/* See also */ <СССР#73432>

--- a/wiki/%D0%A1%D0%A1%D0%A1%D0%A0.wikitext
+++ b/wiki/%D0%A1%D0%A1%D0%A1%D0%A0.wikitext
@@ -7,7 +7,7 @@
 '''СССР'''
 # Borrowed [[Russian]] abbreviation of [[USSR]], the former [[Union of Soviet Socialist Republics]].
 
-====See Also====
+====See also====
 *[[Russia]]
 *[[Georgia]]
 *[[Kazakhstan]]
