--- a/wiki/halide.wikitext
+++ b/wiki/halide.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Etymology===
-See that for [[halogen]]
+See [[halogen]]
 ===Noun===
 '''halide'''
 # a [[salt]] of any halogen [[acid]].
