--- a/wiki/Andorra.wikitext
+++ b/wiki/Andorra.wikitext
@@ -1,69 +1,1 @@
-==English==
-===Etymology===
-The name Andorra probably originates from a [[Navarrese]] word [[andurrial]], which translates as shrub-covered land.
-
-===Proper noun===
-'''Andorra'''
-
-# a small [[country]] in [[Europe]] between [[Spain]] and [[France]] 
-
-====Synonyms====
-Official name: [[Principality of Andorra]].
-
-====Translations====
-*[[Basque]]: [[Andorra]]
-*Bosnian: [[Andora]] ''f''
-*[[Breton]]: [[Andorra]]
-*Bulgarian: [[Андора]]
-*[[Catalan]]: [[Andorra]]
-*Chinese: [[安道尔]] (Āndàoěr)
-*Czech: [[Andorra]]
-*Danish: [[Andorra]]
-*Dutch: [[Andorra]] ''n''
-*[[Esperanto]]: [[Andoro]]
-*Finnish: [[Andorra]]
-*French: [[Andorre]] ''f''
-*Galician: [[Andorra]]
-*German: [[Andorra]]
-*Greek: [[Ανδόρα]]
-*Hebrew: [[אנדורה]]
-*Hungarian: [[Andorra]]
-*[[Ido]]: [[Andora]]
-*Indonesian: [[Andorra]] <!-- Maybe it should be Andora, but id.wikipedia has this spelling-->
-*[[Interlingua]]: [[Andorra]]
-*Italian: [[Andorra]]
-*Japanese: [[アンドラ]] (andora), [[アンドラ公国]] (andora-kōkoku)
-*Latvian: [[Andora]]
-*Lithuanian: [[Andora]] ''f''
-*Malaysian: [[Andorra]]
-*Norwegian: [[Andorra]]
-*Polish: [[Andora]]
-*Portuguese: [[Andorra]]
-*Romanian: [[Andorra]] ''f''
-*Russian: [[Андорра]] ''f''
-*Serbian:
-:*cyrillic: [[Андора]] ''f''
-:*latin: [[Andora]] ''f''
-*Slovenian: [[Andora]]
-*Spanish: [[Andorra]] ''f''
-*Swedish: [[Andorra]]
-*Thai: [[อันดอร์ร่า]] (Andora)
-*Turkish: [[Andorra]]
-*Welsh: [[Andorra]]
-
-===Related words===
-*Adjective: [[Andorran]]
-*Inhabitant: [[Andorran]]
-
-===See also===
-*[[Countries of the world]]
-*[[w:Andorra|Wikipedia article on Andorra]]
-
-[[hi:Andorra]]
-[[it:Andorra]]
-[[hu:Andorra]]
-[[nl:Andorra]]
-[[pl:Andorra]]
-[[fi:Andorra]]
-[[sv:Andorra]]
-[[tr:Andorra]]
+#redirect [[Andorra]]
