--- a/wiki/Anguilla.wikitext
+++ b/wiki/Anguilla.wikitext
@@ -1,47 +1,1 @@
-==English==
-===Proper noun===
-# a [[British]] [[overseas]] territory in the Caribbean. 
-====Translations====
-*'''Bosnian''': Angila ''f''
-*'''Breton''': [[Anguilla]]
-*'''Bulgarian''': [[Ангила]]
-*'''Chinese''': [[安圭拉]]
-*'''Danish''': Anguilla
-*'''Dutch''': Anguilla
-*'''Esperanto''': [[Angvilo]], [[Angilo]]
-*'''Finnish''': Anguilla
-*'''French''': Anguilla
-*'''German''': Anguilla
-*'''Greek''': [[Ανγκουίλα]]
-*'''Hungarian''': Anguilla
-*'''Interlingua''': Anguilla
-*'''Italian''': Anguilla
-*'''Japanese''': [[アンギラ]] (angira)
-*'''Polish''': Anguilla
-*'''Portuguese''': [[Anguila]]
-*'''Romanian''': [[Anguila]] ''f''
-*'''Russian''': [[Ангилья]]
-*'''Spanish''': [[Anguila]]
-*'''Swedish''': Anguilla
-*'''Turkish''': Anguilla
-
-===See also===
-
-*[[Wiktionary Appendix:Countries of the world]]
-*[[w:Anguilla|Wikipedia article on Anguilla]]
-
-----
-
-==Italian==
-===Noun===
-'''anguilla'''
-#[[eel]]
-
-===Proper noun===
-#Anguilla
-
-[[Category:Dependencies]] [[Category:it:Dependencies]] [[Category:it:Fish]]
-
-[[it:anguilla]]
-[[pl:Anguilla]]
-[[tr:Anguilla]]
+#redirect [[Anguilla]]
