--- a/wiki/Bermuda.wikitext
+++ b/wiki/Bermuda.wikitext
@@ -1,36 +1,1 @@
-==English==
-
-===Proper noun===
-
-# a [[British]] [[overseas]] territory in the Caribbean. 
-====Translations====
-*'''Bosnian''': Bermuda ''f''
-*'''Breton''': [[Bermuda]]
-*'''Bulgarian''': [[Бермуда]]
-*'''Chinese''': [[百慕大]] (Baimuda), [[百慕大群岛]] (Baimuda qundao)
-*'''Danish''': Bermuda
-*'''Dutch''': Bermuda
-*'''Esperanto''': [[Bermudo]], [[Bermudoj]]
-*'''Finnish''': Bermuda
-*'''French''': [[Bermudes]] ''f pl''
-*'''German''': [[Bermudas]]
-*'''Greek''': [[Βερμούδες]]
-*'''Hungarian''': [[Bermuda]], [[Bermudák]], [[Bermuda-szigetek]]
-*'''Interlingua''': Bermuda
-*'''Italian''': Bermuda ''f pl''
-*'''Japanese''': [[バーミューダ]] (bāmyūda)
-*'''Polish''': [[Bermudy]]
-*'''Portuguese''': [[Bermudas]]
-*'''Romanian''': [[Bermuda]], [[Bermude]] ''f''
-*'''Russian''': [[Бермуды]]
-*'''Spanish''': [[Bermudas]] ''f pl''
-*'''Swedish''': Bermuda
-*'''Turkish''': Bermuda
-
-===See also===
-*[[Wiktionary Appendix:Countries of the world]]
-*[[w:Bermuda|Wikipedia article on Bermuda]]
-
-[[Category:Dependencies]]
-
-[[tr:Bermuda]]
+#redirect [[Bermuda]]
