--- a/wiki/Brunei.wikitext
+++ b/wiki/Brunei.wikitext
@@ -1,33 +1,1 @@
-==English==
-
-===Proper noun===
-
-# a country in Southeast Asia. Official name: Negara Brunei Darussalam.
-
-====Translations====
-*Bosnian: [[Bruneji]] ''m pl''
-*[[Breton]]: [[Brunei]]
-*Bulgarian: [[Бруней]]
-*Chinese: [[文莱]] (Wénlái)
-*Danish: [[Brunei]]
-*Dutch: [[Brunei]]
-*[[Esperanto]]: [[Brunejo]]
-*Finnish: [[Brunei]]
-*French: [[Brunei]]
-*German: [[Brunei Darussalam]]
-*Greek: [[Μπρουνέι]]
-*Hungarian: [[Brunei]]
-*[[Interlingua]]: [[Brunei]]
-*Italian: [[Brunei]]
-*Japanese: [[ブルネイ]] (burunei)
-*Polish: [[Brunei]]
-*Portuguese: [[Brunei]]
-*Romanian: [[Brunei]]
-*Russian: [[Бруней Дарассалам]]
-*Spanish: [[Brunéi]]
-*Swedish: [[Brunei]]
-*Turkish: [[Bruney]]
-
-===See also===
-*[[Countries of the world]]
-*[[en:Brunei|Wikipedia article on Brunei]]
+#redirect [[Brunei]]
