[[chile]] moved to [[Chile]]: uppercase <chile#173640>

--- a/wiki/Chile.wikitext
+++ b/wiki/Chile.wikitext
@@ -1,54 +1,1 @@
-==English==
-===Proper noun===
-'''Chile'''
-
-# A country in South America. Official name: Republic of Chile.
-
-====Translations====
-*Arabic: [[شيلي]] (Shi:li:) 
-*[[Breton]]: [[Chile]]
-*Bosnian: [[Čile]] ''m''
-*Chinese: [[智利]] (Zhìlì)
-*Danish: [[Chile]]
-*Dutch: [[Chili]]
-*[[Esperanto]]: [[Ĉilio]]
-*Finnish: [[Chile]]
-*French: [[Chili]]
-*German: [[Chile]]
-*Greek: [[Χιλή]]
-*Hungarian: [[Chile]]
-*[[Interlingua]]: [[Chile]]
-*Italian: [[Cile]]
-*Japanese: [[チリ]] (Chiri)
-*Korean: [[칠레]] (chil'le)
-*Polish: [[Chile]]
-*Portuguese: [[Chile]]
-*Romanian: [[Chile]]
-*Russian: [[Чили]]
-*Serbian:
-:*cyrillic: [[Чиле]] ''m''
-:*latin: [[Čile]] ''m''
-*Spanish: [[Chile]]
-*Swedish: [[Chile]]
-*Turkish: [[Şili]]
-
-====See also====
-*[[Countries of the world]]
-
-====Etymology====
-From Quechua ''chili'', the end of the world.
-
-===Noun===
-'''chile''' (''plural'' '''[[chillun]]''')
-
-====Etymology====
-Spelling representing a Black pronunciation of [[child]].
-
-#(''Black'') [[Child]].
-
-[[de:Chile]]
-[[es:Chile]]
-[[hi:Chile]]
-[[hu:Chile]]
-[[pl:Chile]]
-[[sv:Chile]]
+#redirect [[Chile]]
