--- a/wiki/pair.wikitext
+++ b/wiki/pair.wikitext
@@ -10,7 +10,7 @@
 ==== Wry definition ====
 * A [[trio]] of [[pear]]s [[pare]]d to a [[pair]] of [[pear]]s.
 
-===Noun===
+=== Noun ===
 '''pair''' (''plural'' '''pairs''')
 
 #[[Two]] [[similar]] or [[identical]] [[thing]]s [[taken]] [[together]].
@@ -21,9 +21,10 @@
 #Used in the names of some objects and garments that have two similar parts or halves.
 #:''a pair of scissors''
 #:''a pair of jeans''
+#: but not ''a pair of [[cymbals]]''
 #{{cricket}} A [[score]] of [[zero]] [[run]]s (a [[duck]]) in both [[innings]] of a two-innings [[match]]
 
-====Translations====
+==== Translations ====
 *Dutch: [[paar]] ''n'', [[koppel]] ''n'', [[stel]] ''n'', [[tweetal]] ''n'' (1,2)
 *French: [[paire]] ''f'' (1,2)
 *Italian: [[paio]] ''m'' (''plural'': [[paia]] ''f'') (1,2)
