/* Homophones - Pole */ <poll#70270>

--- a/wiki/poll.wikitext
+++ b/wiki/poll.wikitext
@@ -1,7 +1,8 @@
 ==English==
 
-===Homophones===
-*[[pole]]
+=== Homophones ===
+* [[pole]]
+* [[Pole]]
 
 ===Noun===
 '''poll''' ([[polls]], [[polled]], [[polling]])
