--- a/wiki/Ecuador.wikitext
+++ b/wiki/Ecuador.wikitext
@@ -1,37 +1,1 @@
-==English==
-
-===Proper noun===
-'''Ecuador'''
-{{wikipedia}}
-
-# Country in South America. Official name: Republic of Ecuador.
-===Translations===
-*[[Bosnian]]: [[Ekvador]] ''m''
-*[[Breton]]: Ecuador
-*Chinese: [[厄瓜多尔]] (Eguaduo'er)
-*Czech: [[Ekvádor]]
-*[[Danish]]: Ecuador
-*[[Dutch]]: Ecuador
-*[[Esperanto]]: [[Ekvadoro]]
-*Finnish: Ecuador
-*French: [[Équateur]]
-*German: Ecuador
-*Greek: [[Ισημερινός]], [[Εκουαδόρ]]
-*Hungarian: Ecuador
-*[[Interlingua]]: Ecuador
-*Italian: Ecuador
-*Japanese: [[エクアドル]] (Ekuadoru)
-*[[Polish]]: [[Ekwador]]
-*[[Portuguese]]: [[Equador]]
-*[[Romanian]]: Ecuador ''n''
-*Russian: [[Эквадор]]
-*Spanish: Ecuador
-*[[Swedish]]: Ecuador
-*[[Turkish]]: [[Ekvador]]
-
-===See also===
-* [[Countries of the world]]
-
-[[de:Ecuador]]
-[[hu:Ecuador]]
-[[nl:Ecuador]]
+#redirect [[Ecuador]]
