[[eritrea]] moved to [[Eritrea]]: uppercase <eritrea#173686>

--- a/wiki/Eritrea.wikitext
+++ b/wiki/Eritrea.wikitext
@@ -1,114 +1,1 @@
-==English==
-===Proper noun===
-'''Eritrea'''
-
-# Country in Eastern Africa. Official name: State of Eritrea.<!--encyclopedic info - does not belong in Wiktionary: Its capital city is [[Asmara]]. -->
-
-===Translations===
-*[[Bosnian]]: Eritreja ''f''
-*[[Breton]]: Eritrea
-*Chinese: [[厄立特里亚]] (Eliteliya)
-*Danish: Eritrea
-*Dutch: Eritrea
-*[[Esperanto]]: [[Eritreo]]
-*Finnish: Eritrea
-*French: [[Érythrée]] ''f''
-*German: Eritrea
-*Greek: [[Ερυθραία]]
-*Hungarian: Eritrea
-*[[Interlingua]]: Eritrea
-*Italian: Eritrea ''f''
-*Japanese: [[エリトリア]] (Eritoria)
-*Polish: [[Erytrea]]
-*Portuguese: [[Eritreia]] (''in Portugal''), [[Eritréia]] (''in Brazil'')
-*Romanian: Eritrea ''f''
-*Russian: [[Эритрия]]
-*Slovene: [[Eritreja]] ''f''
-*Spanish: Eritrea
-*Swedish: Eritrea
-*Turkish: [[Eritre]]
-
-===See also===
-*[[Countries of the world]]
-*[[w:Eritrea|Wikipedia article on Eritrea]]
-
-----
-==Breton==
-===Proper noun===
-'''Eritrea'''
-
-#Eritrea
-
-----
-==Danish==
-===Proper noun===
-'''Eritrea'''
-
-#Eritrea
-
-----
-==Dutch==
-===Proper noun===
-'''Eritrea'''
-
-#Eritrea
-
-----
-==Finnish==
-===Proper noun===
-'''Eritrea'''
-
-#Eritrea
-
-----
-==German==
-===Proper noun===
-'''Eritrea'''
-
-#Eritrea
-
-----
-==Hungarian==
-===Proper noun===
-'''Eritrea'''
-
-#Eritrea
-
-----
-==Interlingua==
-===Proper noun===
-'''Eritrea'''
-
-#Eritrea
-
-----
-==Italian==
-===Proper noun===
-'''Eritrea''' ''f''
-
-#Eritrea
-
-----
-==Romanian==
-===Proper noun===
-'''Eritrea''' ''f''
-
-#Eritrea
-
-----
-==Spanish==
-===Proper noun===
-'''Eritrea'''
-
-#Eritrea
-
-----
-==Swedish==
-===Proper noun===
-'''Eritrea'''
-
-#Eritrea
-
-[[de:Eritrea]]
-[[hu:Eritrea]]
-[[fi:Eritrea]]
+#redirect [[Eritrea]]
