[[estonia]] moved to [[Estonia]]: uppercase <estonia#173688>

--- a/wiki/Estonia.wikitext
+++ b/wiki/Estonia.wikitext
@@ -1,54 +1,1 @@
-{{wikipedia}}
-==English==
-===Proper noun===
-'''Estonia'''
-
-# One of the [[Baltic]] countries. Official name: Republic of Estonia.
-
-====Translations====
-*[[Bosnian]]: [[Estonija]] ''f''
-*[[Breton]]: Estonia
-*Chinese: [[爱沙尼亚]] (Aishaniya)
-*Czech: [[Estonsko]]
-*Danish: [[Estland]]
-*Dutch: [[Estland]]
-*[[Esperanto]]: [[Estonio]], [[Estonujo]]
-*[[Estonian]]: [[Eesti]]
-*Finnish: [[Viro]], [[Eesti]]
-*French: [[Estonie]]
-*German: [[Estland]]
-*Greek: [[Εσθονία]]
-*Hungarian: [[Észtország]]
-*[[Interlingua]]: Estonia
-*Italian: Estonia
-*Japanese: [[エストニア]] (Esutonia)
-*Latvian: [[Igaunija]] ''f''
-*Polish: Estonia
-*Portuguese: [[Estónia]] (''Portugal''), [[Estônia]] (''Brazil'')
-*Romanian: Estonia ''f''
-*Russian: [[Эстония]]
-*Slovene: [[Estonija]] ''f''
-*Spanish: Estonia
-*Swedish: [[Estland]]
-*Turkish: [[Estonya]]
-
-===See also=== 
-*[[Countries of the world]]
-*[[Wiktionary Appendix:Place names in Europe|Place names in Europe]]
-
-----
-
-==Italian==
-===Proper noun===
-'''Estonia''' ''f''
-
-# Estonia
-
-===Related terms===
-*[[estone]]
-
-[[it:Estonia]]
-[[hu:Estonia]]
-[[nl:Estonia]]
-[[ja:Estonia]]
-[[pl:Estonia]]
+#redirect [[Estonia]]
