--- a/wiki/Fiji.wikitext
+++ b/wiki/Fiji.wikitext
@@ -1,44 +1,1 @@
-==English==
-===Pronunciation===
-*fē'jē, /ˈfiːdʒiː/, /<tt>"fi:dZi:<tt>/
-
-===Proper noun===
-'''Fiji''' (or ''Viti'')
-
-# A [[country]] in [[Oceania]] comprising over 300 [[island]]s. Official name: Republic of the Fiji Islands.
-
-====Derived terms====
-*[[Fijian]]
-
-====Translations====
-*[[Bosnian]]: Fidži ''m''
-*[[Breton]]: [[Fidji]]
-*Bulgarian: [[Фиджи]]
-*Chinese: [[斐济]] (fěi jì)
-*Danish: Fiji
-*Dutch: Fiji
-*[[Esperanto]]: [[Fiĝio]], [[Fiĝioj]]
-*{{fj}}: [[Viti]] ([[:fj:Viti|Vosa Vaka Viti]])
-*Finnish: [[Fidži]]
-*French: [[Fidji]]
-*German: [[Fidschi]]
-*Greek: [[Φίτζι]]
-*Hungarian: [[Fidzsi-szigetek]]
-*[[Interlingua]]: Fiji
-*Italian: [[Figi]]
-*Japanese: [[フィジー]]
-*Korean: [[피지]] (Piji)
-*Polish: [[Fidżi]]
-*Portuguese: Fiji
-*Romanian: Fiji
-*Russian: [[Фиджи]]
-*Spanish: [[Fiyi]]
-*Swedish: Fiji
-*Turkish: Fiji
-
-===See also===
-* [[Countries of the world]]
-*[[w:Fiji|Wikipedia article on Fiji]]
-
-[[hi:Fiji]]
-[[fi:Fiji]]
+#redirect [[Fiji]]
