[[guinea]] moved to [[Guinea]]: uppercase <guinea#173735>

--- a/wiki/Guinea.wikitext
+++ b/wiki/Guinea.wikitext
@@ -1,39 +1,1 @@
-==English==
-
-===Proper noun===
-'''Guinea'''
-
-# Country in Western Africa. Official name: Republic of Guinea.
-
-====Translations====
-*[[Bosnian]]: Gvineja ''f''
-*[[Breton]]: [[Ginea]]
-*[[Chinese]]: [[几内亚]]
-*[[Danish]]: Guinea
-*[[Dutch]]: [[Guinee]]
-*[[Esperanto]]: [[Gvineo]]
-*[[Finnish]]: Guinea
-*[[French]]: [[Guinée]] ''f''
-*[[German]]: Guinea
-*[[Greek]]: [[Γουινέα]]
-*[[Hungarian]]: [[Guinea]]
-*[[Interlingua]]: Guinea
-*[[Italian]]: Guinea
-*[[Japanese]]: [[ギニア]]
-*[[Polish]]: [[Gwinea]]
-*[[Portuguese]]: [[Guiné]]
-*[[Romanian]]: [[Guineea]] ''f''
-*[[Russian]]: [[Гвинея]]
-*[[Spanish]]: Guinea
-*[[Swedish]]: Guinea
-*[[Turkish]]: [[Gine]]
-
-====See also====
-* [[Countries of the world]]
-
-===Noun===
-'''guinea'''
-#(''British'') (in pre-decimal currency) one [[pound]] and one [[shilling]]
-# formerly a [[British]] [[gold]] [[coin]]
-
-[[hu:Guinea]]
+#redirect [[Guinea]]
