--- a/wiki/Liberia.wikitext
+++ b/wiki/Liberia.wikitext
@@ -1,32 +1,1 @@
-==English==
-===Proper noun===
-
-# Country in Western Africa. Official name: Republic of Liberia.
-===Translations===
-*[[Bosnian]]: Liberija ''f''
-*[[Breton]]: Liberia
-*[[Catalan]]: [[Libèria]]
-*[[Chinese]]: [[利比里亚]] (lì bǐ lǐ yà)
-*[[Danish]]: Liberia
-*[[Dutch]]: Liberia
-*[[Esperanto]]: [[Liberio]]
-*[[Finnish]]: Liberia
-*[[French]]: Liberia ''m''
-*[[German]]: Liberia
-*[[Greek]]: [[Λιβερία]] ''f''
-*[[Hungarian]]: [[Libéria]]
-*[[Interlingua]]: Liberia
-*[[Italian]]: Liberia ''f''
-*[[Japanese]]: [[リベリア]] (Riberia)
-*[[Polish]]: Liberia
-*[[Portuguese]]: [[Libéria]]
-*[[Romanian]]: [[Liberia]] ''f''
-*[[Russian]]: [[Либерия]]
-*[[Slovene]]: [[Liberija]] ''f''
-*[[Spanish]]: Liberia
-*[[Swedish]]: Liberia
-*[[Turkish]]: [[Liberya]]
-
-''See also'' [[Countries of the world]]
-
-[[hu:Liberia]]
+#redirect [[Liberia]]
