--- a/wiki/NA.wikitext
+++ b/wiki/NA.wikitext
@@ -1,1 +1,45 @@
-#redirect [[na]]
+==Translingual==
+===Symbol===
+'''Na'''
+# see [[Na]]
+
+----
+==Dutch==
+===Preposition===
+'''na'''
+
+#[[behind]], [[after]]
+
+===Synonyms===
+[[achter]]
+
+----
+==German==
+===Interjection===
+'''Na!'''
+# [[Well]]!
+----
+==Latin==
+===Verb===
+'''na'''
+
+#singular imperative of [[nare]], to [[swim]]: [[swim]]!
+----
+== Slovak ==
+===Preposition===
+'''na''' ''followed by [[locative]] ([[šiesty pád]])
+# [[on]] ''(location)''
+'''na''' ''followed by [[accusative]] ([[štvrtý pád]])
+# [[for]] ''(purpose)''
+
+----
+==Tok Pisin==
+===Conjunction===
+'''na'''
+# [[and]]
+
+[[it:na]]
+[[la:Na]]
+[[nl:na]]
+[[ja:Na]]
+[[pl:Na]]
