lowercase version <mg#29427>

--- a/wiki/MG.wikitext
+++ b/wiki/MG.wikitext
@@ -1,1 +1,11 @@
-#redirect [[mg]]
+==Translingual==
+===Symbol===
+'''Mg'''
+# see [[Mg]]
+[[Category:Symbols]]
+'''mg'''
+# [[milligram]]
+
+===See also===
+*[[μg]]
+[[pl:mg]]
