/* Verb - entrain */ <detrain#92525>

--- a/wiki/detrain.wikitext
+++ b/wiki/detrain.wikitext
@@ -4,3 +4,7 @@
 
 #to [[exit]] from a [[train]]; to [[disembark]]
 #:''If you plan to '''detrain''' at the next stop, please begin gathering your belongings.''
+
+=== reverse ===
+
+* [[entrain]]
