[[monaco]] moved to [[Monaco]]: uppercase <monaco#173872>

--- a/wiki/Monaco.wikitext
+++ b/wiki/Monaco.wikitext
@@ -1,122 +1,1 @@
-==English==
-===Proper noun===
-'''Monaco'''
-
-#A country in Europe. Official name: Principality of Monaco.
-#The capital of the principality of Monaco.
-
-====Translations====
-*[[Bosnian]]: Monako ''m'' (1, 2)
-*[[Breton]]: Monaco (1)
-*Chinese: [[摩纳哥]] (1)
-*[[Czech]]: [[Monako]] (1)
-*Danish: Monaco (1)
-*Dutch: Monaco (1)
-*[[Esperanto]]: [[Monako]] (1)
-*Finnish: Monaco (1)
-*French: Monaco ''m'' (1), Monaco (2)
-*German: Monaco (1)
-*Greek: [[Μονακό]] (1)
-*[[Hungarian]]: [[Monaco]] (1, 2)
-*[[Interlingua]]: Monaco (1)
-*Irish: Monacó ''m'' (1)
-*Italian: Monaco ''f'' (1), Principato di Monaco ''m'' (1)
-*Japanese: [[モナコ]] (monako) (1)
-*Polish: [[Monako]] (1)
-*Portuguese: [[Mónaco]] (1)
-*Romanian: Monaco ''n'' (1)
-*Russian: [[Монако]] (1)
-*Slovene: [[Monako]] ''m''
-*Spanish: [[Mónaco]] (1)
-*Swedish: Monaco (1)
-*Turkish: [[Monako]] (1)
-
-===See also===
-*[[Countries of the world]]
-*[[w:Monaco|Wikipedia article on Monaco]]
-
-----
-
-==Breton==
-===Proper noun===
-'''Monaco'''
-
-#Monaco
-
-----
-==Danish==
-===Proper noun===
-'''Monaco'''
-
-#Monaco
-
-----
-==Dutch==
-===Proper noun===
-'''Monaco'''
-
-#Monaco
-
-----
-==Finnish==
-===Proper noun===
-'''Monaco'''
-
-#Monaco
-
-===Related terms===
-*[[monégasque]]
-
-----
-
-==French==
-===Proper noun===
-'''Monaco''' ''m''
-
-#Monaco (''principality'')
-#Monaco (''capital'')
-
-----
-==German==
-===Proper noun===
-'''Monaco'''
-
-#Monaco
-
-----
-==Interlingua==
-===Proper noun===
-'''Monaco'''
-
-#Monaco
-
-----
-==Italian==
-===Proper noun===
-'''Monaco''' ''f''
-
-#Monaco
-# [[Munich]] ([[Monaco di Baviera]])
-
-===Noun===
-'''monaco''' ''m''
-
-# [[monk]]
-
-----
-
-==Romanian==
-===Proper noun===
-'''Monaco''' ''n''
-
-#Monaco
-
-----
-==Swedish==
-===Proper noun===
-'''Monaco'''
-
-#Monaco
-
-[[hu:Monaco]]
-[[ja:Monaco]]
+#redirect [[Monaco]]
