--- a/wiki/desperately.wikitext
+++ b/wiki/desperately.wikitext
@@ -1,2 +1,7 @@
-==Adverb== 
-In a desperate manner; without regard to danger or safety; recklessly.
+===Adverb===
+'''desperately'''
+
+In a [[desperate]] manner; without regard to danger or safety; [[recklessly]].
+
+====Translations====
+Dutch: [[wanhopig]]
