--- a/wiki/MG.wikitext
+++ b/wiki/MG.wikitext
@@ -1,11 +1,8 @@
 ==Translingual==
 ===Symbol===
 '''Mg'''
-# see [[Mg]]
-[[Category:Symbols]]
-'''mg'''
-# [[milligram]]
-
+# {{chemistry}} symbol for [[magnesium]]
+# [[megagram]]
 ===See also===
-*[[μg]]
-[[pl:mg]]
+*[[mg]]
+[[Category:Symbols]]
