--- a/wiki/AL.wikitext
+++ b/wiki/AL.wikitext
@@ -1,15 +1,64 @@
+==Translingual==
+===Symbol===
+'''Al'''
+# see [[Al]]
+
+----
+
 ==English==
+===Proper noun===
+'''Al'''
+# see [[Al]]
 
-==={{Abbreviation}}===
-#[[Alabama]], a {{USstate}}
 ----
-==Spanish==
-===Abbreviation===
-#[[América Latina]]
-----
-==Portuguese==
-===Abbreviation===
-#[[Alagoas]] (Brazilian state)
 
-[[pl:AL]]
-[[zh:AL]]
+==Dutch==
+<!-- part of speech? -->
+'''al''' (alternate form: [[alle]]
+
+# [[all]]
+
+====Related words====
+[[allen]], [[alles]], [[aller]]
+
+----
+
+==Esperanto==
+===Preposition===
+'''al'''
+
+#[[to]]
+----
+
+==Italian==
+===Preposition===
+'''al'''
+
+# (''contraction of [[a#Italian|a]] [[il#Italian|il]]'') [[at]] [[the]], [[to]] the.
+
+----
+
+==Swedish==
+===Noun===
+'''al''' (''c'', ''pl'' [[alar]], ''def sing'' [[alen]], ''def pl'' [[alarna]])
+
+# (''botanic'') [[alder]]
+
+----
+
+== Volapük == 
+=== Adjective === 
+'''al'''
+
+# [[each]]
+# [[every]]
+[[fr:al]]
+[[eo:al]]
+[[it:al]]
+[[nl:al]]
+[[pl:al]]
+[[Category:Dutch language]]
+[[Category:Esperanto language]]
+[[Category:Italian language]]
+[[Category:Swedish language]]
+[[Category:Volapük language]]
