/* Proper noun */ <Чад#172776>

--- a/wiki/%D0%A7%D0%B0%D0%B4.wikitext
+++ b/wiki/%D0%A7%D0%B0%D0%B4.wikitext
@@ -1,1 +1,16 @@
-#redirect [[чад]]
+=={{ru}}==
+[[Category:Russian nouns]]
+===Proper noun===
+'''Чад''' (Čad) ''m''
+
+#[[Chad]] ''(Republic of)''
+#[[Chad]] ''(Lake)''
+
+----
+
+==Serbian==
+[[Category:Serbian nouns]]
+===Proper noun===
+'''Чад''' ''m''
+
+#[[Chad]]
