--- a/wiki/AL.wikitext
+++ b/wiki/AL.wikitext
@@ -1,64 +1,12 @@
 ==Translingual==
 ===Symbol===
 '''Al'''
-# see [[Al]]
+# {{chemistry}} symbol for [[aluminum]]
+[[Category:Symbols]]
 
 ----
 
 ==English==
 ===Proper noun===
 '''Al'''
-# see [[Al]]
-
-----
-
-==Dutch==
-<!-- part of speech? -->
-'''al''' (alternate form: [[alle]]
-
-# [[all]]
-
-====Related words====
-[[allen]], [[alles]], [[aller]]
-
-----
-
-==Esperanto==
-===Preposition===
-'''al'''
-
-#[[to]]
-----
-
-==Italian==
-===Preposition===
-'''al'''
-
-# (''contraction of [[a#Italian|a]] [[il#Italian|il]]'') [[at]] [[the]], [[to]] the.
-
-----
-
-==Swedish==
-===Noun===
-'''al''' (''c'', ''pl'' [[alar]], ''def sing'' [[alen]], ''def pl'' [[alarna]])
-
-# (''botanic'') [[alder]]
-
-----
-
-== Volapük == 
-=== Adjective === 
-'''al'''
-
-# [[each]]
-# [[every]]
-[[fr:al]]
-[[eo:al]]
-[[it:al]]
-[[nl:al]]
-[[pl:al]]
-[[Category:Dutch language]]
-[[Category:Esperanto language]]
-[[Category:Italian language]]
-[[Category:Swedish language]]
-[[Category:Volapük language]]
+#Short form of the male [[given name]]s [[Alan]], [[Albert]], [[Alex]], [[Alexander]], [[Alfred]].
