[[serbian]] moved to [[Serbian]]: capitalization <serbian#173875>

--- a/wiki/Serbian.wikitext
+++ b/wiki/Serbian.wikitext
@@ -1,82 +1,1 @@
-==English==
-===Pronunciation===
-*/ˈsɜː(r)biːə/, /<tt>"s3:(r)bi:@</tt>/
-
-===Noun===
-'''Serbian''' (''pl'' [[Serbians]])
-
-#A person that comes from the [[Balkan]] country of [[Serbia]].
-#the language of the [[Serbs]].
-
-====Translations====
-'''A person'''
-*Bosnian: [[Srbijanac]] ''m s'', [[Srbijanci]] ''m pl'', [[Srbijanka]] ''f s'', [[Srbijanke]] ''f pl'', [[Srbijanče]] ''n s''
-*Bulgarian: [[сърбин]] ''m'', [[сръбкиня]] ''f'', [[сърби]] ''pl''
-*Chinese:[[塞尔维亚人]]
-*Dutch: [[Serviër]] ''m'', [[Servische]] ''f'', [[Serviërs]] ''p''
-*Farsi: [[صربی]] (Serbi)
-*Finnish: [[serbialainen]]
-*French: [[Serbe]] ''m/f''
-*German: [[Serbe]], [[Serbin]]
-*Serbian:
-:*cyrillic: [[Србијанац]] ''m s'', [[Србијанци]] ''m pl'', [[Србијанка]] ''f s'', [[Србијанке]] ''f pl'', [[Србијанче]] ''n s''
-:*latin: [[Srbijanac]] ''m s'', [[Srbijanci]] ''m pl'', [[Srbijanka]] ''f s'', [[Srbijanke]] ''f pl'', [[Srbijanče]] ''n s''
-*Slovak: [[Srb]] ''m'', [[Srbka]] ''f''
-*Slovenian: [[Srb]] ''m'', [[Srbkinja]] ''f''
-*Swedish: [[serb]]
-
-'''the language'''
-*Bosnian: [[srpski]] ''m''
-*Chinese: [[塞尔维亚语]]
-*Dutch: [[Servisch]]
-*Farsi: [[صربی]] (Serbi)
-*Finnish: [[serbia]], [[serbian kieli]]
-*French: [[serbe]] ''m''
-*German: [[serbisch]]
-*Serbian:
-:*cyrillic: [[српски]] ''m''
-:*latin: [[srpski]] ''m''
-*Slovak: [[srbčina]] ''f''
-*Swedish: [[serbiska]]
-
-===Adjective===
-'''Serbian'''
-# of or pertaining to Serbia, Serbs, or the language of the Serbs
-====Translations====
-'''pertaining to Serbia'''
-*Bosnian: [[srbijanski]] ''m s/pl'', [[srbijanska]] ''f s and n pl'', [[srbijanske]] ''f pl'', [[srbijansko]] ''n s''
-*Chinese:[[塞尔维亚的]]
-*Farsi: [[صربی]] (Serbi)
-*Finnish: [[serbialainen]]
-*French: [[serbe]] ''m/f''
-*German: [[serbisch]]
-*Serbian:
-:*cyrillic: [[србијански]] ''m s/pl'', [[србијанска]] ''f s and n pl'', [[србијанске]] ''f pl'', [[србијанско]] ''n s''
-:*latin: [[srbijanski]] ''m s/pl'', [[srbijanska]] ''f s and n pl'', [[srbijanske]] ''f pl'', [[srbijansko]] ''n s''
-*Slovenian: [[srbski]] ''m'', [[srbska]] ''f'', [[srbsko]] ''n''
-*Swedish: [[serbisk]], [[serbiskt]], [[serbiska]]
-<br>
-'''pertaining to Serbs and the Serbian language'''
-*Bosnian: [[srpski]] ''m s/pl'', [[srpska]] ''f s and n pl'', [[srpske]] ''f pl'',  [[srpsko]] ''n s''
-*Chinese:[[塞尔维亚的]]
-*Farsi: [[صربی]] (Serbi)
-*Finnish: [[serbialainen]]
-*French: [[serbe]] ''m/f''
-*German: [[serbisch]]
-*Serbian:
-:*cyrillic: [[српски]] ''m s/pl'', [[српска]] ''f s and n pl'', [[српске]] ''f pl'', [[српско]] ''n s''
-:*latin: [[srpski]] ''m s/pl'', [[srpska]] ''f s and n pl'', [[srpske]] ''f pl'',  [[srpsko]] ''n s''
-*Slovenian: [[srbski]] ''m'', [[srbska]] ''f'', [[srbsko]] ''n''
-*Swedish: [[serbisk]], [[serbiskt]], [[serbiska]]
-
-===Related terms===
-*[[Serbia]]
-*[[Serbo-Croatian]]
-
-===Serbian alphabet ([[w:Cyrillic|Cyrillic]])===
-[[А|Аа]] [[Б|Бб]] [[В|Вв]] [[Г|Гг]] [[Д|Дд]] [[Ђ|Ђђ]] [[Е|Ее]] [[Ж|Жж]] [[З|Зз]] [[И|Ии]] [[Ј|Јј]] [[К|Кк]] [[Л|Лл]] [[Љ|Љљ]] [[М|Мм]] [[Н|Нн]] [[Њ|Њњ]] [[О|Оо]] [[П|Пп]] [[Р|Рр]] [[С|Сс]] [[Т|Тт]] [[Ћ|Ћћ]] [[У|Уу]] [[Ф|Фф]] [[Х|Хх]] [[Ц|Цц]] [[Ч|Чч]] [[Џ|Џџ]] [[Ш|Шш]]  
-
-====External links====
-{{interwiktionary|code=sr}}
-
-[[nl:Serbian]]
+#redirect [[Serbian]]
