added nl <scarf#54855>

--- a/wiki/scarf.wikitext
+++ b/wiki/scarf.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Noun===
-'''scarf''' (''plural'' '''scarves''')
+'''scarf''' (''plural'' [[scarves]])
 #A long, often [[knit]]ted, [[garment]] worn around the neck.
 #A [[headscarf]].
 
@@ -12,6 +12,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from A to I go here-->
+*Dutch: [[sjaal]] ''m'', [[sjerp]] ''m''
 *Esperanto [[nuktuko]]
 *Finnish: [[huivi]]
 *French: [[écharpe]] ''f''
@@ -33,6 +34,23 @@
 '''to scarf'''
 #''(transitive)'' (''slang'') to [[eat]] very [[quick]]ly
 #: ''You sure scarfed that pizza.''
+
+====Translations====
+
+'''eat very quickly'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*Dutch: [[schrokken]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
 
 ====Related terms====
 * [[scarf down]]
