--- a/wiki/harvest.wikitext
+++ b/wiki/harvest.wikitext
@@ -5,9 +5,17 @@
 #The yield of harvesting (usually a food crop.)
 #The product or result of any exertion or labor; gain; reward.
 
+====Translations====
+*Dutch: [[oogst]] ''m''
+*French: [[recolte]] ''f'', [[moisson]] ''f''
+
 ===Verb===
-'''harvest'''
+'''to harvest'''
 #to bring in; [[reap]]; [[glean]]
+
+====Translations====
+*Dutch: [[oogsten]]
+*French: [[recolter]]
 
 ===See also===
 *[[harvest time]]
@@ -18,8 +26,5 @@
 *[[harvest mouse]]
 *[[harvest queen]]
 *[[harvest spider]]
-
-===Translations===
-*French: recolte ''f'', moisson ''f''
 
 [[it:harvest]]
