split capitalized and non capitalized form <pyrophorus#97926>

--- a/wiki/pyrophorus.wikitext
+++ b/wiki/pyrophorus.wikitext
@@ -1,1 +1,7 @@
-#redirect [[pyrophorus]]
+==English==
+===Noun===
+'''pyrophorus'''
+# a substance capable of taking [[fire]] [[spontaneously]] on [[exposure]] to the [[air]], especially in a [[finely]] [[divided]] state
+
+===See also===
+[[Pyrophorus]]
