split capitalized and non capitalized form <Pyrophorus#149678>

--- a/wiki/pyrophorus.wikitext
+++ b/wiki/pyrophorus.wikitext
@@ -1,7 +1,13 @@
 ==English==
-===Noun===
-'''pyrophorus'''
-# a substance capable of taking [[fire]] [[spontaneously]] on [[exposure]] to the [[air]], especially in a [[finely]] [[divided]] state
+===Proper Noun===
+'''Pyrophorus'''
+
+# a [[taxonomic]] [[genus]], within [[family]] [[Lampyridae]] - the [[fireflies]]
 
 ===See also===
-[[Pyrophorus]]
+[[pyrophorus]]
+
+===Related terms===
+{{wikispecies}}
+*[[species]]
+**[[Pyrophorus noctiluca]]
