lowercase version <cl#29438>

--- a/wiki/CL.wikitext
+++ b/wiki/CL.wikitext
@@ -1,1 +1,10 @@
-#redirect [[cl]]
+===Translingual==
+===Symbol===
+'''cl'''
+# [[centilitre]], [[centiliter]]
+===See also===
+* [[Cl]]
+[[fr:Cl]]
+[[la:Cl]]
+[[ja:Cl]]
+[[pl:Cl]]
