--- a/wiki/Burma.wikitext
+++ b/wiki/Burma.wikitext
@@ -1,29 +1,1 @@
-==English==
-
-===Proper noun===
-'''Burma'''
-
-# Traditional name (formerly the official name, and still preferred by some) of [[Myanmar]] - country in [[Southeast Asia]].
-
-====Related terms====
-*[[Burmese]]
-
-====Translations====
-*Chinese: [[Myanmar]] (Miandian, Mian3dian4)
-*Dutch: [[Birma]]
-*[[Esperanto]]: [[Birmo]]
-*Finnish: Burma
-*French: [[Birmanie]]
-*[[Interlingua]]: [[Birmania]]
-*Italian: [[Birmania]]
-*Myanmar: [[ရန္မာ]]
-*Polish: [[Birma]]
-*Portuguese: [[Birmânia]]
-*Spanish: [[Birmania]]
-*Swedish: Burma
-
-===See also===
-*[[Countries of the world]]
-
-[[nl:burma]]
-[[pl:Burma]]
+#redirect [[Burma]]
