uppercase version <Cl#119500>

--- a/wiki/CL.wikitext
+++ b/wiki/CL.wikitext
@@ -1,11 +1,8 @@
-===Translingual===
-
+==Translingual==
 ===Symbol===
-'''cl'''
-# [[centilitre]], [[centiliter]]
+'''Cl'''
+# [[Internet]] code of [[Chile]]
+#{{chemistry}} symbol for [[chlorine]]
 ===See also===
-* [[Cl]]
-[[fr:Cl]]
-[[la:Cl]]
-[[ja:Cl]]
-[[pl:Cl]]
+*[[cl]]
+[[Category:Symbols]]
