--- a/wiki/CL.wikitext
+++ b/wiki/CL.wikitext
@@ -1,8 +1,10 @@
 ==Translingual==
 ===Symbol===
-'''Cl'''
-# [[Internet]] code of [[Chile]]
-#{{chemistry}} symbol for [[chlorine]]
+'''cl'''
+# [[centilitre]], [[centiliter]]
 ===See also===
-*[[cl]]
-[[Category:Symbols]]
+* [[Cl]]
+[[fr:Cl]]
+[[la:Cl]]
+[[ja:Cl]]
+[[pl:Cl]]
