uppercase version <Ar#112096>

--- a/wiki/AR.wikitext
+++ b/wiki/AR.wikitext
@@ -1,45 +1,7 @@
 ==Translingual==
 ===Symbol===
 '''Ar'''
-# see [[Ar]]
-
-===Abbreviation===
-'''ar''' (3 letter ISO code: [[ara]])
-
-# [[Arabic]]
-
-----
-
-==Dutch==
-===Noun===
-'''ar''' ''f''
-
-#(''obsolete'') [[sledge]]
-
-----
-==Old English==
-===Noun===
-'''ār''' ''[[Wiktionary Appendix:Old English strong declension|strong]] f''
-
-#[[honor]]
-----
-
-==Portuguese==
-===Noun===
-'''ar''' ''m''
-
-* [[air]]
-
-[[Category:Portuguese nouns]]
-----
-
-==Swedish==
-'''ar'''
-
-# [[are]], measurement of [[area]]. Equals 100 m<sup>2</sup>
-
-[[fr:Ar]]
-[[gl:Ar]]
-[[nl:ar]]
-[[ja:Ar]]
-[[pl:Ar]]
+# {{chemistry}} symbol for [[argon]]
+===See also===
+*[[ar]]
+[[Category:Symbols]]
