--- a/wiki/k.wikitext
+++ b/wiki/k.wikitext
@@ -1,1 +1,44 @@
-#redirect [[k]]
+== Czech ==
+=== Preposition ===
+'''k'''
+# [[into]]
+# [[to]]
+# [[at]]
+# [[near]]
+# [[toward]], [[towards]]
+
+==Letter==
+'''K''', '''k'''
+
+#The 11th letter of the [[Appendix:English alphabet|English alphabet]], preceded by [[J]] and followed by [[L]], and representing /k/.
+#A symbol of the [[IPA]], representing a [[voiceless]] [[velar]] [[stop]].
+#The first letter of [[callsign]]s allocated to American broadcast television and radio stations west of the Mississippi river.
+===Other Forms===
+*Uppercase: [[K]]
+*With [[cedilla]]: [[ķ]]
+*With hook: [[ƙ]]
+*With [[caron]]: [[ǩ]]
+*With [[acute]]: [[ḱ]]
+*With dot below: [[ḳ]]
+*With line below: [[ḵ]]
+===See Also===
+*[[ĸ]] ([[kra]])
+*[[Κ]] ([[kappa]])
+*[[К]] ([[ka]])
+[[Category:Latin letters]]
+
+===Noun===
+
+#The eleventh letter of the [[English]] alphabet.
+# S.I. measurement value of 1,000
+#in computers, often used to represent 1,024
+----
+
+==Latin==
+
+#abbreviation for [[Kaeso]]
+----
+{{indexletters1}}  '''[http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=K K] '''-- [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Ka Ka] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Kb Kb] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Kc Kc] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Kd Kd] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Ke Ke] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Kf Kf] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Kg Kg] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Kh Kh] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Ki Ki] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Kj Kj] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Kk Kk] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Kl Kl] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Km Km] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Kn Kn] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Ko Ko] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Kp Kp] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Kq Kq] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Kr Kr] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Ks Ks] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Kt Kt] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Ku Ku] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Kv Kv] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Kw Kw] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Kx Kx] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Ky Ky] [http://wiktionary.org/w/wiki.phtml?title=Special:Allpages&from=Kz Kz]<br>
+{{indexletters2}}
+
+[[pl:k]]
