--- a/wiki/Palau.wikitext
+++ b/wiki/Palau.wikitext
@@ -1,35 +1,1 @@
-==English==
-
-===Proper noun===
-
-# Country in Oceania. Official name: Republic of Palau.
-
-====Translations====
-*[[Bosnian]]: Palau ''m''
-*[[Breton]]: Palau
-*Bulgarian: [[Палау]]
-*[[Chinese]]: [[帕劳]] (Palao)
-*[[Danish]]: Palau
-*[[Dutch]]: Palau
-*[[Esperanto]]: [[Belaŭo]], [[Palaŭo]]
-*[[Finnish]]: Palau
-*[[French]]: [[Belau]], Palau
-*[[German]]: Palau
-*[[Greek]]: [[Παλάου]]
-*[[Hungarian]]: Palau
-*[[Interlingua]]: Palau
-*[[Italian]]: Palau
-*[[Japanese]]: [[パラオ]] (Parao)
-*[[Polish]]: Palau, [[Belau]]
-*[[Portuguese]]: Palau
-*[[Romanian]]: Palau ''n''
-*[[Russian]]: [[Палау]]
-*[[Spanish]]: [[Palaos]]
-*[[Swedish]]: Palau
-*[[Turkish]]: Palau
-
-''See also'': [[Countries of the world]]
-
-[[hu:Palau]]
-[[fi:Palau]]
-[[tr:Palau]]
+#redirect [[Palau]]
