--- a/wiki/CA.wikitext
+++ b/wiki/CA.wikitext
@@ -1,59 +1,7 @@
 ==Translingual==
 ===Symbol===
 '''Ca'''
-# see [[Ca]]
-----
-
-==English==
-==={{Abbreviation}}===
-''See'' [[ca.]]
-----
-==Ido==
-===Preposition===
-# [[this]]
-----
-==Italian==
-===Abbreviation===
-'''ca'''
-
-# abbreviation of [[circa]]
-
+# {{chemistry}} symbol for element [[calcium]]
 ===See also===
-*[[calcio]]
-*[[ca']]
-*[[c.a.]]
-----
-==Malay==
-===Noun===
-'''ca'''
-
-#[[tea]]
-
-====Synonyms====
-*[[teh]]
-
-----
-
-==Neapolitan==
-===Adverb===
-'''ca'''
-#[[what]]
-
-===Pronoun===
-'''ca'''
-#[[that]]
-#[[who]]
-#[[which]]
-
-==See also==
-*[[ca.]]
-*[[ça]]
-*[[çà]]
-
-[[Category: Neapolitan language]]
-
-[[fr:Ca]]
-[[gl:Ca]]
-[[it:ca]]
-[[ja:Ca]]
-[[pl:Ca]]
+*[[ca]]
+[[Category:Symbols]]
