--- a/wiki/SC.wikitext
+++ b/wiki/SC.wikitext
@@ -1,4 +1,7 @@
-'''Sc'''<br>{{chemistry}} symbol for [[scandium]]
+==Translingual==
+===Symbol===
+'''Sc'''
+#{{chemistry}} symbol for [[scandium]]
 [[Category:Symbols]]
 
 [[fr:Sc]]
