[[sc]] moved to [[Sc]]: uppercase <sc#174005>

--- a/wiki/SC.wikitext
+++ b/wiki/SC.wikitext
@@ -1,9 +1,1 @@
-==Translingual==
-===Symbol===
-'''Sc'''
-#{{chemistry}} symbol for [[scandium]]
-[[Category:Symbols]]
-
-[[fr:Sc]]
-[[ja:Sc]]
-[[pl:Sc]]
+#redirect [[Sc]]
