--- a/wiki/Cologne.wikitext
+++ b/wiki/Cologne.wikitext
@@ -1,32 +1,1 @@
-==English==
-===Proper noun===
-'''Cologne'''
-
-#A city in northwestern [[Germany]] on the [[Rhine]] River
-
-====Etymology====
-From Latin '''[[Colonia Agrippina]]''', ''Agrippine Colony'', a settlement founded by Agrippina, the mother of Roman Emperor Nero; from Latin '''[[colonus]]''', ultimately from [[Proto-Indo-European]] '''*[[kwel]]'''.
-
-====Translations====
-*Dutch: [[Keulen]] ''n''
-*French: Cologne
-*German: [[Köln]] ''n''
-*Hungarian: [[Köln]]
-*Italian: [[Colonia]] ''f''
-*Latin: [[Colonia Agrippina]] ''f''
-*Polish: [[Kolonia]] ''f''
-*[[Romanica]]: [[Colonia]] ''f''
-*Spanish: [[Colon&iacute;a]] ''f''
-*Swedish: [[Köln]] ''c''
-
-====See also====
-*[[w:Cologne|Wikipedia article on Cologne]]
-
-*[[eau de Cologne]], [[Kölnisch Wasser]]
-
-===Noun===
-'''cologne'''; plural '''[[colognes]]'''
-
-# type of [[scented]] or [[perfumed]] water named after the city of Cologne.  Also called ''[[eau de Cologne]]'' or ''[[Kölnisch Wasser]]''.
-
-[[Category:English exonyms]]
+#redirect [[Cologne]]
