uppercase version <Ti#161297>

--- a/wiki/ti.wikitext
+++ b/wiki/ti.wikitext
@@ -1,52 +1,7 @@
 ==Translingual==
 ===Symbol===
 '''Ti'''
-# see [[Ti]]
-----
-
-==English==
-===Noun===
-
-#(''Music'') A syllable used in [[sol-fa]] to represent the seventh note of a [[major scale]]
-
-====Synonyms====
-*[[si]], [[te]]
-----
-==Italian==
-===Pronoun===
-'''te''' (''emphasis'' [[te]])
-
-# (''objective of [[tu]]'') [[you]] 
-
-===Reflexive Pronoun===
-'''ti'''
-
-# (''second-person singular of [[si#Italian|si]]'')[[you]]
-
-===Noun===
-'''ti''' ''m'' or ''f''
-
-# the letter [[T]]
-
-----
-==Spanish==
-===Pronunciation===
-*[[w:IPA|IPA]]: /ti/
-
-===Pronoun===
-#''Casual.'' [[you]] (''singular nominative informal form'')
-
-===Noun===
-#[[tea]].
-----
-
-==Hungarian==
-===Personal pronoun===
-'''ti''' (''singular'' [[te]])
-
-#[[you]]: Second person, plural, nominative, informal form
-
-[[ja:Ti]]
-[[pl:ti]]
-
-[[Category:Hungarian personal pronouns]]
+#{{Chemistry}} Symbol for the element [[titanium]]
+===See also===
+*[[ti]]
+[[Category:Symbols]]
