--- a/wiki/R%C3%A9union.wikitext
+++ b/wiki/R%C3%A9union.wikitext
@@ -1,28 +1,1 @@
-==English==
-
-'''proper noun'''
-
-# Overseas department of France in Southern Africa. Official name: Department of Réunion.
-===Translations===
-*[[Bosnian]]: Reunion ''m''
-*[[Breton]]: [[Reunion]]
-*[[Danish]]: Réunion
-*[[Dutch]]: Réunion
-*[[Esperanto]]: [[Reunio]]
-*[[Finnish]]: Réunion
-*[[French]]: Réunion
-*[[German]]: Réunion
-*[[Greek]]: [[Ρεϋνιόν]], [[Ρεουνιόν]]
-*[[Interlingua]]: [[Reunion]]
-*[[Italian]]: [[Riunione]]
-*[[Japanese]]: [[レユニオン]] (reyunion)
-*[[Polish]]: [[Reunion]]
-*[[Portuguese]]: [[Reunião]]
-*[[Romanian]]: [[Reunion]] ''n''
-*[[Russian]]: [[остров Реюньон]]
-*[[Spanish]]: [[Reunión]]
-*[[Swedish]]: Réunion
-
-''See'': [[Countries of the world]]
-
-[[et:Réunion]]
+#redirect [[Réunion]]
