--- a/wiki/Cr.wikitext
+++ b/wiki/Cr.wikitext
@@ -1,4 +1,7 @@
-'''Cr'''<br>{{chemistry}} symbol for [[chromium]]
+==Translingual==
+===Symbol===
+'''Cr'''
+#{{chemistry}} symbol for [[chromium]]
 [[Category:Symbols]]
 
 [[fr:Cr]]
