/* See Also */ <sarcasm#62533>

--- a/wiki/sarcasm.wikitext
+++ b/wiki/sarcasm.wikitext
@@ -22,6 +22,7 @@ The word comes from the [[Late Latin]] word, ''[[sarcasmus]''], which, in turn, 
 *{{pedialite}}
 *[[irony]]
 *[[Sarcastic]]
+*[[facetious]]
 
 [[la:Sarcasm]]
 [[Category:Greek derivations]]
