--- a/wiki/MN.wikitext
+++ b/wiki/MN.wikitext
@@ -1,4 +1,7 @@
-'''Mn'''<br>{{chemistry}} symbol for [[manganese]]
+==Translingual==
+===Symbol===
+'''Mn'''
+#{{chemistry}} symbol for [[manganese]]
 [[Category:Symbols]]
 
 [[fr:Mn]]
