[[mn]] moved to [[Mn]]: uppercase <mn#174116>

--- a/wiki/MN.wikitext
+++ b/wiki/MN.wikitext
@@ -1,9 +1,1 @@
-==Translingual==
-===Symbol===
-'''Mn'''
-#{{chemistry}} symbol for [[manganese]]
-[[Category:Symbols]]
-
-[[fr:Mn]]
-[[ja:Mn]]
-[[pl:Mn]]
+#redirect [[Mn]]
