--- a/wiki/fe.wikitext
+++ b/wiki/fe.wikitext
@@ -1,1 +1,37 @@
-#redirect [[fe]]
+{{Wikipedia}}
+==Translingual==
+===Symbol===
+'''Fe'''
+# see [[Fe]]
+----
+
+==Danish==
+===Noun===
+'''fe''' ''c''
+
+# [[fairy]]
+
+===See also===
+*[[alf]] ''c''
+
+----
+
+
+
+==Spanish==
+===Noun===
+'''fe''' ''f''
+
+# [[faith]]
+
+----
+
+==Swedish==
+===Noun===
+'''fe''' ''c''
+
+#[[fairy]], a mythological being.
+
+[[ja:fe]]
+[[pl:Fe]]
+[[sv:fe]]
