--- a/wiki/China.wikitext
+++ b/wiki/China.wikitext
@@ -1,1 +1,122 @@
-#redirect [[China]]
+==English==
+===Pronunciation===
+*[[AHD]]: chī'nə
+*[[IPA]]: /ˈtʃaɪnə/
+*[[SAMPA]]: /<tt>"tSaIn@</tt>/
+
+===Proper noun===
+'''China'''<!--(Zhongguo): what is this?-->
+
+#A country in East Asia. Official name: People's Republic of China (Zhonghua Renmin Gongheguo).
+# Region in East Asia comprising the areas governed by the People's Republic of China and the Republic of China ([[Taiwan]]).
+# The civilisation/civilization of the Chinese people.
+
+====Translations====
+{{checktrans}}
+*Arabic: [[الصين]] (aṣ-ṣīn)
+*Basque: [[Txina]]
+*Bosnian: [[Kina]] ''f''
+*[[Breton]]: [[Sina]]
+*Chinese: [[中国]] / [[中國]] ([[Zhōngguó]], [[Zhongguo]])
+*Czech: [[Čína]]
+*Danish: [[Kina]]
+*Dutch: China
+*[[Esperanto]]: [[Ĉinio]], [[Ĉinujo]], [[Ĥinujo]]
+*Finnish: [[Kiina]]
+*French: [[Chine]]
+*German: China
+*Greek: [[Κίνα]]
+*Hindi: [[चीन]] (cīn)
+*Hungarian: [[Kína]]
+*Indonesian: China, [[Cina]]
+*[[Interlingua]]: China
+*Italian: [[Cina]] ''f''
+*Japanese: [[中国]] ([[ちゅうごく]], chūgoku)
+*Korean: [[중국]] [中國] (jungguk)
+*Malay: [[Tiongkok]]
+*[[Maldivian]]: [[Seenu Kara]]
+*[[Pahlavi]] [[čīnī]]
+*Persian: [[چين]] (čīn)
+*Polish: [[Chiny]]
+*Portuguese: China ''f''
+*Romanian: China ''f''
+*[[Sanskrit]]: [[चीन]] (čīn)
+*Russian: [[Китай]] (Kitay)
+*Serbian:
+:*cyrillic: [[Кина]] ''f''
+:*latin: [[Kina]] ''f''
+*Slovene: [[Kitajska]] ''f''
+*Spanish: China
+*Swedish: [[Kina]]
+*Thai: [[จีน]] (Cīn)
+*Turkish: [[Çin]]
+*[[Urdu]]: [[چين]] (čīn)
+*Vietnamese: [[Trung quốc]]
+
+====Derived terms====
+*[[Chinese]]
+
+====See also====
+*[[china]]
+*[[Cathay]]
+*[[w:China in world languages|China in world languages]]
+*[[Countries of the world]]
+
+----
+==Dutch==
+===Proper noun===
+'''China'''
+
+#China (''the country'')
+
+----
+==German==
+===Proper noun===
+'''China'''
+
+#China (''the country'')
+
+----
+==Indonesian==
+===Proper noun===
+'''China'''
+
+====Variant spellings====
+*[[Cina#Indonesian|Cina]]
+
+#China (''the country'')
+
+----
+==Interlingua==
+===Proper noun===
+'''China'''
+
+#China (''the country'')
+
+----
+==Portuguese==
+===Proper noun===
+'''China''' ''f''
+
+#China (''the country'')
+
+----
+==Romanian==
+===Proper noun===
+'''China''' ''f''
+
+#China (''the country'')
+
+----
+==Spanish==
+===Proper noun===
+'''China'''
+
+#China (''the country'')
+
+[[Category:English country nouns]]
+
+[[hi:China]]
+[[hu:China]]
+[[nl:China]]
+[[pl:China]]
