uppercase version <Fe#127426>

--- a/wiki/fe.wikitext
+++ b/wiki/fe.wikitext
@@ -1,37 +1,9 @@
-{{Wikipedia}}
 ==Translingual==
+===Etymology===
+{{L.}} ''[[ferrum]]''
 ===Symbol===
 '''Fe'''
-# see [[Fe]]
-----
-
-==Danish==
-===Noun===
-'''fe''' ''c''
-
-# [[fairy]]
-
+{{chemistry}} symbol for [[iron]]
 ===See also===
-*[[alf]] ''c''
-
-----
-
-
-
-==Spanish==
-===Noun===
-'''fe''' ''f''
-
-# [[faith]]
-
-----
-
-==Swedish==
-===Noun===
-'''fe''' ''c''
-
-#[[fairy]], a mythological being.
-
-[[ja:fe]]
-[[pl:Fe]]
-[[sv:fe]]
+*[[fe]]
+[[Category:Symbols]]
