--- a/wiki/China.wikitext
+++ b/wiki/China.wikitext
@@ -4,7 +4,7 @@
 
 #(''uncountable'') [[Ceramic]] or [[porcelain]] <!-- isn't it just one type of porcelain? [[User:Hippietrail|Hippietrail]] 08:19, 20 Feb 2004 (UTC) -->
 #(''uncountable'') [[Tableware]] made from china.
-#(''[[Cockney rhyming slang]]; shortened from'' '''china plate'''; ''countable'')) [[Mate]] (i.e., friend).
+#(''[[Cockney rhyming slang]]; shortened from'' '''china plate'''; ''countable'') [[Mate]] (i.e., friend).
 #:''All right, me old china?''
 #(''countable'') A [[cymbal]], flattened at the perimeter, about 16 to 20 inches (40 to 50 centimetres) across, that is ridden or crashed to produce a distinctive "trashy" sound.
 
