[[cu]] moved to [[Cu]]: capitalization <cu#174172>

--- a/wiki/Cu.wikitext
+++ b/wiki/Cu.wikitext
@@ -1,16 +1,1 @@
-==Translingual==
-'''Cu'''<br>{{chemistry}} symbol for [[copper]]
-[[Category:Symbols]]
-
-----
-==Neapolitan==
-===Preposition===
-'''cu'''
-#[[with]]
-
-[[de:cu]]
-[[fr:Cu]]
-[[gl:Cu]]
-[[it:cu]]
-[[ja:Cu]]
-[[pl:Cu]]
+#redirect [[Cu]]
