--- a/wiki/shuck.wikitext
+++ b/wiki/shuck.wikitext
@@ -4,4 +4,5 @@
 See also [[husk]].
 
 ==Transitive Verb==
-#To remove from a shell, especially in relation to [[mollusc]]s such as [[oyster]]s, or [[grain]]s such as [[corn]].
+#To remove from a shell, especially in relation to [[grain]]s such as [[corn]].
+#To split open a shell (with a knife), especially [[mollusc]]s such as [[oyster]]s.
