--- a/wiki/hypothesis.wikitext
+++ b/wiki/hypothesis.wikitext
@@ -12,6 +12,7 @@
 *French: [[hypothèse]] ''f''
 *German: [[Hypothese]] ''f'' (1)
 *Persian: [[فرضیه]] (farziyeh), [[نگره]] (negareh)
+*{{pt}}: [[:pt:hipótese|hipótese]]
 *Spanish: [[hipótesis]] ''f''
 *Swedish: [[hypotes]] ''c''
 
