--- a/wiki/New_Zealand.wikitext
+++ b/wiki/New_Zealand.wikitext
@@ -1,7 +1,7 @@
 ==English==
 ===Pronunciation===
-*[[RP]]: "nyoo͞-zē'lənd, /ˌnjuːˈziːlənd/, /%nju:"zi:l@nd/
-*(''US''): "n(y)oo͞-zē'lənd, /ˌn(j)uːˈziːlənd/, /%n(j)u:"zi:l@nd/
+*[[RP]]: "nyoo͞-zē'lənd, /ˌnjuːˈziːlənd/, /<tt>%nju:"zi:l@nd</tt>/
+*(''US''): "n(y)oo͞-zē'lənd, /ˌn(j)uːˈziːlənd/, /<tt>%n(j)u:"zi:l@nd</tt>/
 
 ===Etymology===
 From Dutch '''[[Nieuw Zeeland]]''', "new Zeeland", after the Dutch settlement in [[Batavia]], which in turn had been named after the Dutch province of [[Zeeland]].
